[es] adding spanish translation

--- a/locale/es/LC_MESSAGES/advanced/chapter-12.po
+++ b/locale/es/LC_MESSAGES/advanced/chapter-12.po
@@ -3,25 +3,25 @@
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
-# 
+#
 # Translators:
 # Vicky Vergara <vicky@georepublic.de>, 2022
-# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 09:41-0600\n"
 "PO-Revision-Date: 2022-03-01 19:42+0000\n"
 "Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"Language: es\n"
+"Language-Team: Spanish "
+"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/advanced/chapter-12.rst:11
 msgid "Create a Network Topology"
@@ -29,22 +29,22 @@ msgstr "Crear una topología de red"
 
 #: ../../build/docs/advanced/chapter-12.rst:17
 msgid ""
-":doc:`osm2pgrouting <../appendix/appendix-3>` is a convenient tool, and its "
-"focus to work on OpenStreetMap data. There are several cases where "
-":doc:`osm2pgrouting <../appendix/appendix-3>` can't be used. Some network "
-"data already comes with a network topology that can be used with pgRouting "
-"out-of-the-box. Often network data is stored in Shape file format (``.shp``)"
-" and we can use PostGIS' ``shp2pgsql`` converter to import the data into a "
-"PostgreSQL database."
+":doc:`osm2pgrouting <../appendix/appendix-3>` is a convenient tool, and "
+"its focus to work on OpenStreetMap data. There are several cases where "
+":doc:`osm2pgrouting <../appendix/appendix-3>` can't be used. Some network"
+" data already comes with a network topology that can be used with "
+"pgRouting out-of-the-box. Often network data is stored in Shape file "
+"format (``.shp``) and we can use PostGIS' ``shp2pgsql`` converter to "
+"import the data into a PostgreSQL database."
 msgstr ""
-":doc:`osm2pgrouting <../appendix/appendix-3>` es una herramienta conveniente"
-" y su enfoque es trabajar con datos de OpenStreetMap. Hay varios casos en "
-"los que :doc:`osm2pgrouting <../appendix/appendix-3>` no se puede utilizar. "
-"Algunos datos de red ya vienen con una topología de red que se puede usar "
-"con pgRouting out-of-the-box. A menudo, los datos de red se almacenan en "
-"formato de archivo Shape (``.shp``) y podemos usar el convertidor de "
-"PostGIS' ``shp2pgsql`` para importar los datos a una base de datos "
-"PostgreSQL."
+":doc:`osm2pgrouting <../appendix/appendix-3>` es una herramienta "
+"conveniente y su enfoque es trabajar con datos de OpenStreetMap. Hay "
+"varios casos en los que :doc:`osm2pgrouting <../appendix/appendix-3>` no "
+"se puede utilizar. Algunos datos de red ya vienen con una topología de "
+"red que se puede usar con pgRouting out-of-the-box. A menudo, los datos "
+"de red se almacenan en formato de archivo Shape (``.shp``) y podemos usar"
+" el convertidor de PostGIS' ``shp2pgsql`` para importar los datos a una "
+"base de datos PostgreSQL."
 
 #: ../../build/docs/advanced/chapter-12.rst:24
 msgid "But what to do then?"
@@ -53,11 +53,11 @@ msgstr "¿Pero qué hacer entonces?"
 #: ../../build/docs/advanced/chapter-12.rst:26
 msgid ""
 "In this chapter you will learn how to create a basic `Routing Network "
-"Topology` from a network data that does not have a routing Topology create "
-"the minimum attributes needed the `Routing Network Topology`."
+"Topology` from a network data that does not have a routing Topology "
+"create the minimum attributes needed the `Routing Network Topology`."
 msgstr ""
-"En este capítulo aprenderá a crear una `Topología de Red de Ruteo` básica a "
-"partir de datos de red que no tiene una Topología de ruteo crear los "
+"En este capítulo aprenderá a crear una `Topología de Red de Ruteo` básica"
+" a partir de datos de red que no tiene una Topología de ruteo crear los "
 "atributos mínimos necesarios para la `Topología de Red de Ruteo`."
 
 #: ../../build/docs/advanced/chapter-12.rst:31
@@ -70,8 +70,7 @@ msgstr "Cargar los datos de la red"
 
 #: ../../build/docs/advanced/chapter-12.rst:36
 msgid "At first we will load OpenStreetMap sample data with osm2pgsql."
-msgstr ""
-"Al principio cargaremos datos de muestra de OpenStreetMap con osm2pgsql."
+msgstr "Al principio cargaremos datos de muestra de OpenStreetMap con osm2pgsql."
 
 #: ../../build/docs/advanced/chapter-12.rst:49
 msgid "Let's see which tables have been created:"
@@ -98,8 +97,8 @@ msgid ""
 "It is common that road network data provides at least the following "
 "information:"
 msgstr ""
-"Es común que datos de la red carretera proporcionen al menos la siguiente "
-"información:"
+"Es común que datos de la red carretera proporcionen al menos la siguiente"
+" información:"
 
 #: ../../build/docs/advanced/chapter-12.rst:60
 msgid "Road link ID (gid)"
@@ -123,12 +122,12 @@ msgstr "Geometría del camino (the_geom)"
 
 #: ../../build/docs/advanced/chapter-12.rst:66
 msgid ""
-"This allows to display the road network as a PostGIS layer in GIS software, "
-"for example in QGIS. Though it is not sufficient for routing, because it "
-"doesn't contain network topology information."
+"This allows to display the road network as a PostGIS layer in GIS "
+"software, for example in QGIS. Though it is not sufficient for routing, "
+"because it doesn't contain network topology information."
 msgstr ""
-"Esto permite para visualizar la red de carreteras como una capa PostGIS en "
-"software GIS, por ejemplo en QGIS. Aunque no es suficiente para el "
+"Esto permite para visualizar la red de carreteras como una capa PostGIS "
+"en software GIS, por ejemplo en QGIS. Aunque no es suficiente para el "
 "enrutamiento, porque no contiene información de la topología de red."
 
 #: ../../build/docs/advanced/chapter-12.rst:70
@@ -143,23 +142,24 @@ msgstr "Crear una Topología de Red de Ruteo"
 
 #: ../../build/docs/advanced/chapter-12.rst:81
 msgid ""
-"Having your data imported into a PostgreSQL database might require one more "
-"step for pgRouting."
+"Having your data imported into a PostgreSQL database might require one "
+"more step for pgRouting."
 msgstr ""
-"Tener los datos importados en una base de datos PostgreSQL puede requerir un"
-" paso más para pgRouting."
+"Tener los datos importados en una base de datos PostgreSQL puede requerir"
+" un paso más para pgRouting."
 
 #: ../../build/docs/advanced/chapter-12.rst:84
 msgid ""
 "Make sure that your data provides a correct `Routing Network Topology`, "
-"which consists of information about source and target identifiers for each "
-"road link. The results above, show that the network topology does not have "
-"any source and target information."
+"which consists of information about source and target identifiers for "
+"each road link. The results above, show that the network topology does "
+"not have any source and target information."
 msgstr ""
 "Asegúrese de que los datos proporcionan una correcta  `Routing Network "
-"Topology` que consta de información sobre los identificadores de origen y "
-"destino para cada vínculo de carretera. Los resultados anteriores muestran "
-"que la topología de red no tiene ninguna información de origen y destino."
+"Topology` que consta de información sobre los identificadores de origen y"
+" destino para cada vínculo de carretera. Los resultados anteriores "
+"muestran que la topología de red no tiene ninguna información de origen y"
+" destino."
 
 #: ../../build/docs/advanced/chapter-12.rst:89
 msgid "Creation of the `Routing Network Topology` is necessary."
@@ -171,8 +171,8 @@ msgstr "La topología postGIS no es adecuada para ruteo."
 
 #: ../../build/docs/advanced/chapter-12.rst:94
 msgid ""
-"pgRouting provides a general way for creating the `Routing Network Topology`"
-" with the ``pgr_createTopology`` function."
+"pgRouting provides a general way for creating the `Routing Network "
+"Topology` with the ``pgr_createTopology`` function."
 msgstr ""
 "pgRouting proporciona una forma general de crear la `Topología de Red de "
 "Ruteo` con la función ``pgr_createTopology`` ."
@@ -184,7 +184,8 @@ msgstr "Esta función:"
 #: ../../build/docs/advanced/chapter-12.rst:99
 msgid "Assigns a ``source`` and a ``target`` identifiers to each road link"
 msgstr ""
-"Asigna identificadores de ``source`` y ``target`` a cada enlace de carretera"
+"Asigna identificadores de ``source`` y ``target`` a cada enlace de "
+"carretera"
 
 #: ../../build/docs/advanced/chapter-12.rst:100
 msgid ""
@@ -215,12 +216,11 @@ msgid ""
 "First add source and target column, then run the ``pgr_createTopology`` "
 "function ... and wait."
 msgstr ""
-"Primero, agrega la columna de origen y destino y, a continuación, ejecuta la"
-" función  ``pgr_createTopology`` ... esperar."
+"Primero, agrega la columna de origen y destino y, a continuación, ejecuta"
+" la función  ``pgr_createTopology`` ... esperar."
 
 #: ../../build/docs/advanced/chapter-12.rst:115
-msgid ""
-"Depending on the network size this process may take from minutes to hours."
+msgid "Depending on the network size this process may take from minutes to hours."
 msgstr ""
 "Dependiendo del tamaño de la red, este proceso puede tardar de minutos a "
 "horas."
@@ -234,18 +234,18 @@ msgid ""
 "It will also require enough memory (RAM or SWAP partition) to store "
 "temporary data."
 msgstr ""
-"También requerirá suficiente memoria (partición RAM o SWAP) para almacenar "
-"datos temporales."
+"También requerirá suficiente memoria (partición RAM o SWAP) para "
+"almacenar datos temporales."
 
 #: ../../build/docs/advanced/chapter-12.rst:120
 msgid ""
-"The dimension of the tolerance parameter depends on your data projection. "
-"Usually it's either \"degrees\" or \"meters\". In our example the geometry "
-"data projection to determine the tolerance:"
+"The dimension of the tolerance parameter depends on your data projection."
+" Usually it's either \"degrees\" or \"meters\". In our example the "
+"geometry data projection to determine the tolerance:"
 msgstr ""
-"La dimensión del parámetro de tolerancia depende de la proyección de datos. "
-"Por lo general, son \"grados\" o \"metros\". En nuestro ejemplo, la "
-"proyección de datos de geometría para determinar la tolerancia:"
+"La dimensión del parámetro de tolerancia depende de la proyección de "
+"datos. Por lo general, son \"grados\" o \"metros\". En nuestro ejemplo, "
+"la proyección de datos de geometría para determinar la tolerancia:"
 
 #: ../../build/docs/advanced/chapter-12.rst:132
 msgid "Based on this result the tolerance will be 0.00001"
@@ -261,8 +261,7 @@ msgstr "Para verificar que hay una `Topología de Red de Ruteo` básica:"
 
 #: ../../build/docs/advanced/chapter-12.rst:153
 msgid "Also a new table containing the vertices information was created:"
-msgstr ""
-"También se creó una nueva tabla que contiene la información de vértices:"
+msgstr "También se creó una nueva tabla que contiene la información de vértices:"
 
 #: ../../build/docs/advanced/chapter-12.rst:159
 msgid "``id`` is the vertex identifier"
@@ -273,26 +272,28 @@ msgid ""
 "``the_geom`` is the geometry considered for that particular vertex "
 "identifier."
 msgstr ""
-"``the_geom`` es la geometría considerada para ese identificador de vértice "
-"en particular."
+"``the_geom`` es la geometría considerada para ese identificador de "
+"vértice en particular."
 
 #: ../../build/docs/advanced/chapter-12.rst:161
 msgid ""
 "``source`` and ``target`` from the ``planet_osm_roads`` correspond to an "
 "``id`` in ``planet_osm_roads_vertices_pgr`` table"
 msgstr ""
-"``source`` y ``target`` del ``planet_osm_roads`` corresponden a un ``id`` en"
-" la tabla ``planet_osm_roads_vertices_pgr``"
+"``source`` y ``target`` del ``planet_osm_roads`` corresponden a un ``id``"
+" en la tabla ``planet_osm_roads_vertices_pgr``"
 
 #: ../../build/docs/advanced/chapter-12.rst:163
 msgid "Additional columns are for analyzing the topology."
 msgstr "Las columnas adicionales son para analizar la topología."
 
 #: ../../build/docs/advanced/chapter-12.rst:165
-msgid "Now we are ready for our first routing query with :ref:`pgr_dijkstra`"
+msgid ""
+"Now we are ready for our first routing query with "
+":ref:`basic/pedestrian:pgr_dijkstra`"
 msgstr ""
 "Ahora estamos listos para nuestra primera consulta de enrutamiento con "
-":ref:`pgr_dijkstra`"
+":ref:`basic/pedestrian:pgr_dijkstra`"
 
 #: ../../build/docs/advanced/chapter-12.rst:170
 msgid "Analyze and Adjust the Routing Network Topology"
@@ -316,8 +317,7 @@ msgstr "¿Es un segmento aislado un error en los datos?"
 
 #: ../../build/docs/advanced/chapter-12.rst:182
 msgid "Is an isolated segment because its on the edge of the bounding box?"
-msgstr ""
-"¿Es un segmento aislado porque está en el borde del cuadro delimitador?"
+msgstr "¿Es un segmento aislado porque está en el borde del cuadro delimitador?"
 
 #: ../../build/docs/advanced/chapter-12.rst:183
 msgid ""
@@ -330,12 +330,12 @@ msgstr ""
 #: ../../build/docs/advanced/chapter-12.rst:185
 msgid "Are the intersections real intersections and need to be nodded?"
 msgstr ""
-"¿Las intersecciones son verdaderas intersecciones y necesitan ser admitidas?"
+"¿Las intersecciones son verdaderas intersecciones y necesitan ser "
+"admitidas?"
 
 #: ../../build/docs/advanced/chapter-12.rst:186
 msgid "Are the intersections bridges or tunnels and do not need to be nodded?"
-msgstr ""
-"¿Las intersecciones son puentes o túneles y no necesitan ser admitidos?"
+msgstr "¿Las intersecciones son puentes o túneles y no necesitan ser admitidos?"
 
 #: ../../build/docs/advanced/chapter-12.rst:188
 msgid "Depending on the application some adjustments need to be made."
@@ -343,10 +343,11 @@ msgstr "Dependiendo de la aplicación es necesario realizar algunos ajustes."
 
 #: ../../build/docs/advanced/chapter-12.rst:190
 msgid ""
-"Some `topology manipulation <https://docs.pgrouting.org/latest/en/topology-"
-"functions.html>`_ functions help to detect and fix some of the topological "
-"errors in the data."
+"Some `topology manipulation <https://docs.pgrouting.org/latest/en"
+"/topology-functions.html>`_ functions help to detect and fix some of the "
+"topological errors in the data."
 msgstr ""
 "algunas funciones de `topology manipulation "
-"<https://docs.pgrouting.org/latest/en/topology-functions.html>`_ ayudan a "
-"detectar y reparar algunos errores topológicos en los datos."
+"<https://docs.pgrouting.org/latest/en/topology-functions.html>`_ ayudan a"
+" detectar y reparar algunos errores topológicos en los datos."
+
