--- a/locale/es/LC_MESSAGES/basic/data.po
+++ b/locale/es/LC_MESSAGES/basic/data.po
@@ -3,12 +3,12 @@
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
-# 
+#
 # Translators:
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -64,7 +64,7 @@ msgstr ""
 "Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
 "necesario, abrir una ventana de terminal presionando :code:`ctrl-alt-t` y "
 "siguir las instrucciones. Se puede encontrar información sobre la "
-"instalación de OSGeoLive en  :doc:`chapter-3`."
+"instalación de OSGeoLive en  :doc:`../general-intro/chapter-3`."
 
 #: ../../build/docs/basic/data.rst:33
 msgid ""
