--- a/locale/es/LC_MESSAGES/basic/appendix.po
+++ b/locale/es/LC_MESSAGES/basic/appendix.po
@@ -3,165 +3,190 @@
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
-# 
+#
 # Translators:
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 13:41-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"Language: es\n"
+"Language-Team: Spanish "
+"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../build/docs/basic/appendix.rst:11
 msgid "Appendix: Basic workshop solutions"
 msgstr "Apéndice: Soluciones básicas para el taller"
 
 #: ../../build/docs/basic/appendix.rst:14
-msgid "Solutions to :ref:`Pedestrian routing`"
-msgstr "Soluciones a :ref:`Enrutamiento peatonal`"
+msgid "Solutions to :doc:`pedestrian`"
+msgstr "Soluciones a :doc:`pedestrian`"
 
 #: ../../build/docs/basic/appendix.rst:17
 msgid "**Exercise**: 1 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:19
-msgid ":ref:`Exercise 1: Single pedestrian routing`"
-msgstr ":ref:`Ejercicio 1: Ruteo para un sólo peatón`"
+#, fuzzy
+msgid ":ref:`basic/pedestrian:Exercise 1: Single pedestrian routing`"
+msgstr ":ref:`basic/pedestrian:Ejercicio 1: Ruteo para un sólo peatón`"
 
 #: ../../build/docs/basic/appendix.rst:25
 msgid "**Exercise**: 2 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:27
-msgid ":ref:`Exercise 2: Many Pedestrians going to the same destination`"
-msgstr ":ref:`Ejercicio 2: Muchos peatones van al mismo destino`"
+#, fuzzy
+msgid ""
+":ref:`basic/pedestrian:Exercise 2: Many Pedestrians going to the same "
+"destination`"
+msgstr ":ref:`basic/pedestrian:Ejercicio 2: Muchos peatones van al mismo destino`"
 
 #: ../../build/docs/basic/appendix.rst:33
 msgid "**Exercise**: 3 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:35
-msgid ":ref:`Exercise 3: Many Pedestrians departing from the same location`"
-msgstr ":ref:`Ejercicio 3: Muchos peatones que salen de la misma ubicación`"
+#, fuzzy
+msgid ""
+":ref:`basic/pedestrian:Exercise 3: Many Pedestrians departing from the "
+"same location`"
+msgstr ":ref:`basic/pedestrian:Ejercicio 3: Muchos peatones que salen de la misma ubicación`"
 
 #: ../../build/docs/basic/appendix.rst:41
 msgid "**Exercise**: 4 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:43
-msgid ":ref:`Exercise 4: Many Pedestrians going to different destinations`"
-msgstr ":ref:`Ejercicio 4: Muchos peatones que van a diferentes destinos`"
+#, fuzzy
+msgid ""
+":ref:`basic/pedestrian:Exercise 4: Many Pedestrians going to different "
+"destinations`"
+msgstr ":ref:`basic/pedestrian:Ejercicio 4: Muchos peatones que van a diferentes destinos`"
 
 #: ../../build/docs/basic/appendix.rst:49
 msgid "**Exercise**: 5 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:51
+#, fuzzy
 msgid ""
-":ref:`Exercise 5: Many Pedestrians going to different destinations returning"
-" aggregate costs`"
+":ref:`basic/pedestrian:Exercise 5: Many Pedestrians going to different "
+"destinations returning aggregate costs`"
 msgstr ""
-":ref:`Ejercicio 5: Muchos Peatones que van a diferentes destinos devolviendo"
-" costos agregados`"
+":ref:`basic/pedestrian:Ejercicio 5: Muchos Peatones que van a diferentes destinos "
+"devolviendo costos agregados`"
 
 #: ../../build/docs/basic/appendix.rst:57
 msgid "**Exercise**: 6 (**Chapter:** Pedestrian)"
 msgstr "**Ejercicio**: 6 (**Capítulo:** Peatón)"
 
 #: ../../build/docs/basic/appendix.rst:59
+#, fuzzy
 msgid ""
-":ref:`Exercise 6: Many Pedestrians going to different destinations "
-"summarizing the total costs per departure`"
+":ref:`basic/pedestrian:Exercise 6: Many Pedestrians going to different "
+"destinations summarizing the total costs per departure`"
 msgstr ""
-":ref:`Ejercicio 6: Muchos peatones van a diferentes destinos resumiendo "
+":ref:`basic/pedestrian:Ejercicio 6: Muchos peatones van a diferentes destinos resumiendo "
 "costos totales por salida`"
 
 #: ../../build/docs/basic/appendix.rst:65
-msgid "Solutions to :ref:`Vehicle routing`"
-msgstr "Soluciones a :ref:`Enrutamiento de vehículos`"
+#, fuzzy
+msgid "Solutions to :doc:`vehicle`"
+msgstr "Soluciones a :doc:`vehicle`"
 
 #: ../../build/docs/basic/appendix.rst:68
 msgid "**Exercise**: 1 (**Chapter:** Vehicle)"
-msgstr "**Ejercicio**: 1 (**Capítulo:** Vehículo)"
+msgstr "**Ejercicio**: 1 (**Capítulo:** vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:70
-msgid ":ref:`Exercise 1: Vehicle routing - going`"
-msgstr ":ref:`Ejercicio 1: Ruteo de vehículos - ida`"
+#, fuzzy
+msgid ":ref:`basic/vehicle:Exercise 1: Vehicle routing - going`"
+msgstr ":ref:`basic/vehicle:Ejercicio 1: Ruteo de vehículos - ida`"
 
 #: ../../build/docs/basic/appendix.rst:76
 msgid "**Exercise**: 2 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:78
-msgid ":ref:`Exercise 2: Vehicle routing - returning`"
-msgstr ":ref:`Ejercicio 2: Ruteo de vehículos - regreso`"
+#, fuzzy
+msgid ":ref:`basic/vehicle:Exercise 2: Vehicle routing - returning`"
+msgstr ":ref:`basic/vehicle:Ejercicio 2: Ruteo de vehículos - regreso`"
 
 #: ../../build/docs/basic/appendix.rst:84
 msgid "**Exercise**: 3 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:86
-msgid ":ref:`Exercise 3: Vehicle routing when time is money`"
-msgstr ":ref:`Ejercicio 3: Ruteo de vehículos cuando el tiempo es dinero`"
+#, fuzzy
+msgid ":ref:`basic/vehicle:Exercise 3: Vehicle routing when time is money`"
+msgstr ":ref:`basic/vehicle:Ejercicio 3: Ruteo de vehículos cuando el tiempo es dinero`"
 
 #: ../../build/docs/basic/appendix.rst:92
 msgid "**Exercise**: 4 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:94
-msgid ":ref:`Exercise 4: Vehicle routing without penalization`"
-msgstr ":ref:`Ejercicio 4: Ruteo de vehículos sin penalización`"
+#, fuzzy
+msgid ":ref:`basic/vehicle:Exercise 4: Vehicle routing without penalization`"
+msgstr ":ref:`basic/vehicle:Ejercicio 4: Ruteo de vehículos sin penalización`"
 
 #: ../../build/docs/basic/appendix.rst:100
 msgid "**Exercise**: 5 (**Chapter:** Vehicle)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** Vehículo)"
 
 #: ../../build/docs/basic/appendix.rst:102
-msgid ":ref:`Exercise 5: Vehicle routing with penalization`"
-msgstr ":ref:`Ejercicio 5: Ruteo de vehículos con penalización`"
+#, fuzzy
+msgid ":ref:`basic/vehicle:Exercise 5: Vehicle routing with penalization`"
+msgstr ":ref:`basic/vehicle:Ejercicio 5: Ruteo de vehículos con penalización`"
 
 #: ../../build/docs/basic/appendix.rst:109
-msgid "Solutions to :ref:`SQL function`"
-msgstr "Soluciones a :ref:`Función SQL`"
+#, fuzzy
+msgid "Solutions to :doc:`sql_function`"
+msgstr "Soluciones a :doc:`sql_function`"
 
 #: ../../build/docs/basic/appendix.rst:113
 msgid "**Exercise**: 1 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:115
-msgid ":ref:`Exercise 1: Creating a view for routing`"
-msgstr ":ref:`Ejercicio 1: Creación de una vista para el ruteo`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 1: Creating a view for routing`"
+msgstr ":ref:`basic/sql_function:Ejercicio 1: Creación de una vista para el ruteo`"
 
 #: ../../build/docs/basic/appendix.rst:121
 msgid "**Exercise**: 2 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:123
-msgid ":ref:`Exercise 2: Limiting the road network within an area`"
-msgstr ":ref:`Ejercicio 2: Limitar la red viaria dentro de un área`"
+#, fuzzy
+msgid ""
+":ref:`basic/sql_function:Exercise 2: Limiting the road network within an "
+"area`"
+msgstr ":ref:`basic/sql_function:Ejercicio 2: Limitar la red viaria dentro de un área`"
 
 #: ../../build/docs/basic/appendix.rst:128
 msgid "**Exercise**: 3 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:130
+#, fuzzy
 msgid ""
-":ref:`Exercise 3: Creating a materialized view for routing pedestrians`"
+":ref:`basic/sql_function:Exercise 3: Creating a materialized view for "
+"routing pedestrians`"
 msgstr ""
-":ref:`Ejercicio 3: Creación de una vista materializada para ruteo de los "
+":ref:`basic/sql_function:Ejercicio 3: Creación de una vista materializada para ruteo de los "
 "peatones`"
 
 #: ../../build/docs/basic/appendix.rst:136
@@ -169,76 +194,86 @@ msgid "**Exercise**: 4 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:138
-msgid ":ref:`Exercise 4: Testing the views for routing`"
-msgstr ":ref:`Ejercicio 4: Probar las vistas para el ruteo`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 4: Testing the views for routing`"
+msgstr ":ref:`basic/sql_function:Ejercicio 4: Probar las vistas para el ruteo`"
 
 #: ../../build/docs/basic/appendix.rst:145
 msgid "**Exercise**: 5 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:147
-msgid ":ref:`Exercise 5: Get additional information`"
-msgstr ":ref:`Ejercicio 5: Obtener información adicional`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 5: Get additional information`"
+msgstr ":ref:`basic/sql_function:Ejercicio 5: Obtener información adicional`"
 
 #: ../../build/docs/basic/appendix.rst:153
 msgid "**Exercise**: 6 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 6 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:155
-msgid ":ref:`Exercise 6: Route geometry (human readable)`"
-msgstr ":ref:`Ejercicio 6: Geometría de la ruta (legible para humanos)`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 6: Route geometry (human readable)`"
+msgstr ":ref:`basic/sql_function:Ejercicio 6: Geometría de la ruta (legible para humanos)`"
 
 #: ../../build/docs/basic/appendix.rst:161
 msgid "**Exercise**: 7 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 7 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:163
-msgid ":ref:`Exercise 7: Route geometry (binary format)`"
-msgstr ":ref:`Ejercicio 7: Geometría de ruta (formato binario)`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 7: Route geometry (binary format)`"
+msgstr ":ref:`basic/sql_function:Ejercicio 7: Geometría de ruta (formato binario)`"
 
 #: ../../build/docs/basic/appendix.rst:169
 msgid "**Exercise**: 8 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 8 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:171
-msgid ":ref:`Exercise 8: Route geometry directionality`"
-msgstr ":ref:`Ejercicio 8: Direccionalidad de la geometría de la ruta`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 8: Route geometry directionality`"
+msgstr ":ref:`basic/sql_function:Ejercicio 8: Direccionalidad de la geometría de la ruta`"
 
 #: ../../build/docs/basic/appendix.rst:177
 msgid "**Exercise**: 9 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 9 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:179
-msgid ":ref:`Exercise 9: Using the geometry`"
-msgstr ":ref:`Ejercicio 9: Uso de la geometría`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 9: Using the geometry`"
+msgstr ":ref:`basic/sql_function:Ejercicio 9: Uso de la geometría`"
 
 #: ../../build/docs/basic/appendix.rst:185
 msgid "**Exercise**: 10 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 10 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:187
-msgid ":ref:`Exercise 10: Function for an application`"
-msgstr ":ref:`Ejercicio 10: Función para una aplicación`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 10: Function for an application`"
+msgstr ":ref:`basic/sql_function:Ejercicio 10: Función para una aplicación`"
 
 #: ../../build/docs/basic/appendix.rst:192
 msgid "**Exercise**: 11 (**Chapter:** SQL)"
 msgstr "**Ejercicio**: 11 (**Capítulo:** SQL)"
 
 #: ../../build/docs/basic/appendix.rst:194
-msgid ":ref:`Exercise 11: Using the function`"
-msgstr ":ref:`Ejercicio 11: Uso de la función`"
+#, fuzzy
+msgid ":ref:`basic/sql_function:Exercise 11: Using the function`"
+msgstr ":ref:`basic/sql_function:Ejercicio 11: Uso de la función`"
 
 #: ../../build/docs/basic/appendix.rst:200
-msgid "Solutions to :ref:`pl/pgsql function`"
-msgstr "Soluciones a :ref:`pl/pgsql function`"
+#, fuzzy
+msgid "Solutions to :doc:`plpgsql_function`"
+msgstr "Soluciones a :doc:`plpgsql_function`"
 
 #: ../../build/docs/basic/appendix.rst:203
 msgid "**Exercise**: 1 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 1 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:205
-msgid ":ref:`Exercise 1: Number of Vertices`"
-msgstr ":ref:`Ejercicio 1: Número de vértices`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 1: Number of Vertices`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 1: Número de vértices`"
 
 #: ../../build/docs/basic/appendix.rst:207
 #: ../../build/docs/basic/appendix.rst:246
@@ -266,16 +301,18 @@ msgid "**Exercise**: 2 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 2 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:226
-msgid ":ref:`Exercise 2: Vertices on a table`"
-msgstr ":ref:`Ejercicio 2: Vértices en una tabla`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 2: Vertices on a table`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 2: Vértices en una tabla`"
 
 #: ../../build/docs/basic/appendix.rst:242
 msgid "**Exercise**: 3 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 3 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:244
-msgid ":ref:`Exercise 3: Nearest Vertex`"
-msgstr ":ref:`Ejercicio 3: Vértice más cercano`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 3: Nearest Vertex`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 3: Vértice más cercano`"
 
 #: ../../build/docs/basic/appendix.rst:250
 #: ../../build/docs/basic/appendix.rst:279
@@ -297,32 +334,36 @@ msgid "**Exercise**: 4 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 4 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:266
-msgid ":ref:`Exercise 4: Nearest vertex function`"
-msgstr ":ref:`Ejercicio 4: Función de vértice más cercano`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 4: Nearest vertex function`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 4: Función de vértice más cercano`"
 
 #: ../../build/docs/basic/appendix.rst:271
 msgid "**Exercise**: 5 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 5 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:273
-msgid ":ref:`Exercise 5: Test nearest vertex function`"
-msgstr ":ref:`Ejercicio 5: Prueba de la función vértice más cercano`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 5: Test nearest vertex function`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 5: Prueba de la función vértice más cercano`"
 
 #: ../../build/docs/basic/appendix.rst:293
 msgid "**Exercise**: 6 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 6 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:295
-msgid ":ref:`Exercise 6: Creating the main function`"
-msgstr ":ref:`Ejercicio 6: Creación de la función principal`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 6: Creating the main function`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 6: Creación de la función principal`"
 
 #: ../../build/docs/basic/appendix.rst:300
 msgid "**Exercise**: 7 (**Chapter:** pl/pgsql)"
 msgstr "**Ejercicio**: 7 (**Capítulo:** pl/pgsql)"
 
 #: ../../build/docs/basic/appendix.rst:302
-msgid ":ref:`Exercise 7: Using the main function`"
-msgstr ":ref:`Ejercicio 7: Uso de la función principal`"
+#, fuzzy
+msgid ":ref:`basic/plpgsql_function:Exercise 7: Using the main function`"
+msgstr ":ref:`basic/plpgsql_function:Ejercicio 7: Uso de la función principal`"
 
 #: ../../build/docs/basic/appendix.rst:304
 msgid "For ``vehicle_net``"
