--- a/locale/es/LC_MESSAGES/un_sdg/data.po
+++ b/locale/es/LC_MESSAGES/un_sdg/data.po
@@ -2,17 +2,23 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
+# Translators:
+# MarPetra <mvergaratrejo@gmail.com>, 2021
+# Vicky Vergara <vicky@georepublic.de>, 2022
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2022-03-04 10:21-0600\n"
+"PO-Revision-Date: 2021-10-10 17:39+0000\n"
+"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
+"Language: es\n"
+"Language-Team: Spanish "
+"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +26,7 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/data.rst:11
 msgid "Data for Sustainable Development Goals"
-msgstr ""
+msgstr "Datos para los Objetivos de Desarrollo Sostenible"
 
 #: ../../build/docs/un_sdg/data.rst:16
 msgid ""
@@ -29,38 +35,48 @@ msgid ""
 "OpenStreetMaps(OSM). This data will be used for exercises in further "
 "chapters."
 msgstr ""
+"Para poder utilizar pgRouting, los datos deben importarse a una base de "
+"datos. Este capítulo usará ``osm2pgrouting`` para obtener los datos de "
+"OpenStreetMaps (OSM). Estos datos se utilizarán para ejercicios en "
+"capítulos posteriores."
 
 #: ../../build/docs/un_sdg/data.rst:20
 msgid "Chapter Contents"
-msgstr ""
+msgstr "Contenido del Capítulo"
 
 #: ../../build/docs/un_sdg/data.rst:23
 msgid "Work Directory for pgRouting data manipulation"
-msgstr ""
+msgstr "Directorio de trabajo para la manipulación de datos de pgRouting"
 
 #: ../../build/docs/un_sdg/data.rst:31
 msgid "Mumbai database"
-msgstr ""
+msgstr "Base de datos de Mumbai"
 
 #: ../../build/docs/un_sdg/data.rst:33
 msgid "pgRouting is pre-installed as an extension which requires:"
-msgstr ""
+msgstr "pgRouting está preinstalado como una extensión que requiere:"
 
 #: ../../build/docs/un_sdg/data.rst:35
 msgid "Supported PostgreSQL version"
-msgstr ""
+msgstr "Versión PostgreSQL compatible"
 
 #: ../../build/docs/un_sdg/data.rst:36
 msgid "Supported PostGIS version"
-msgstr ""
+msgstr "Versión PostGIS compatible"
 
 #: ../../build/docs/un_sdg/data.rst:38
+#, fuzzy
 msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
 "installed, open a terminal window by pressing ``ctrl-alt-t`` and follow "
 "the instructions.  Information about installing OSGeoLive can be found in"
-" Chapter 3 :ref:`Installation` of this workshop."
+" :ref:`general-intro/chapter-3:Installation` of this workshop."
 msgstr ""
+"Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
+"requerido, abra una ventana de terminal presionando ``ctrl-alt-t`` y siga"
+" las instrucciones.  La información sobre la instalación de OSGeoLive se "
+"puede encontrar en :ref:`general-intro/chapter-3:Instalación` de este "
+"taller."
 
 #: ../../build/docs/un_sdg/data.rst:43
 msgid ""
@@ -68,59 +84,73 @@ msgid ""
 "procedure at this `link <https://docs.pgrouting.org/latest/en/pgRouting-"
 "installation.html>`__"
 msgstr ""
+"Si no está pgRouting instalado. Se puede encontrar el procedimiento de "
+"instalación en este `enlace <https://docs.pgrouting.org/latest/en"
+"/pgRouting-installation.html>`__"
 
 #: ../../build/docs/un_sdg/data.rst:49
 msgid "Create Mumbai database compatible with pgRouting"
-msgstr ""
+msgstr "Crear base de datos de Mumbai compatible con pgRouting"
 
 #: ../../build/docs/un_sdg/data.rst:51
 msgid "Use the following command to create ``mumbai`` database"
-msgstr ""
+msgstr "Utilice el siguiente comando para crear la base de datos ``mumbai``"
 
-#: ../../build/docs/un_sdg/data.rst:57 ../../build/docs/un_sdg/data.rst:191
+#: ../../build/docs/un_sdg/data.rst:57 ../../build/docs/un_sdg/data.rst:189
 msgid "To connect to the database do the following"
-msgstr ""
+msgstr "Para conectarse a la base de datos, haga lo siguiente"
 
-#: ../../build/docs/un_sdg/data.rst:63 ../../build/docs/un_sdg/data.rst:198
+#: ../../build/docs/un_sdg/data.rst:63 ../../build/docs/un_sdg/data.rst:196
 msgid ""
 "After connecting to the database, first step is to create ``EXTENSION`` "
 "to enable pgRouting and PostGIS in the database. Then add the ``SCHEMA`` "
 "for each table."
 msgstr ""
+"Después de conectarse a la base de datos, el primer paso es crear "
+"``EXTENSION``  para habilitar pgRouting y PostGIS en la base de datos. A "
+"continuación, agregue el `SCHEMA`` para cada tabla."
 
 #: ../../build/docs/un_sdg/data.rst:73
 msgid "Get the Mumbai Data"
-msgstr ""
+msgstr "Obtenga los datos de Mumbai"
 
 #: ../../build/docs/un_sdg/data.rst:74
 msgid ""
 "The pgRouting workshop will make use of OpenStreetMap data of an area in "
 "Mumbai City. The instructions for downloading the data are given below."
 msgstr ""
+"El taller pgRouting hará uso de los datos de OpenStreetMap de un área en "
+"la ciudad de Mumbai. Las instrucciones para descargar los datos se dan a "
+"continuación."
 
 #: ../../build/docs/un_sdg/data.rst:78
 msgid "Downloading Mumbai data from OSGeo"
-msgstr ""
+msgstr "Descarga de datos de Mumbai desde OSGeo"
 
 #: ../../build/docs/un_sdg/data.rst:80
 msgid ""
 "The following command is used to download the snapshot of the Mumbai area"
 " data used in this workshop, using the download service of OSGeo."
 msgstr ""
+"El siguiente comando se utiliza para descargar la instantánea de los "
+"datos del área de Mumbai utilizados en este taller, utilizando el "
+"servicio de descarga de OSGeo."
 
-#: ../../build/docs/un_sdg/data.rst:83 ../../build/docs/un_sdg/data.rst:216
+#: ../../build/docs/un_sdg/data.rst:83 ../../build/docs/un_sdg/data.rst:214
 msgid "This workshop depends on this snapshot."
-msgstr ""
+msgstr "Este taller depende de esta instantánea."
 
 #: ../../build/docs/un_sdg/data.rst:92
 msgid "Downloading Mumbai data from OpenStreetMap (OSM)"
-msgstr ""
+msgstr "Descarga de datos de Mumbai desde OpenStreetMap (OSM)"
 
 #: ../../build/docs/un_sdg/data.rst:93
 msgid ""
 "The following command is used to download the OpenStreetMap data of the "
 "area in Mumbai, India."
 msgstr ""
+"El siguiente comando se utiliza para descargar los datos de OpenStreetMap"
+" del área en Mumbai, India."
 
 #: ../../build/docs/un_sdg/data.rst:95
 msgid ""
@@ -129,179 +159,212 @@ msgid ""
 "adjustments. The command was used to take the snapshot of the data on "
 "June 2021."
 msgstr ""
+"Los datos de OpenStreetMap cambian día a día, por lo tanto, si se "
+"utilizan estos datos, los resultados pueden cambiar y algunas consultas "
+"pueden necesitar ajustes. El comando se utilizó para tomar la instantánea"
+" de los datos en junio de 2021."
 
 #: ../../build/docs/un_sdg/data.rst:106
 msgid "Upload Mumbai data to the database"
-msgstr ""
+msgstr "Cargar datos de Mumbai en la base de datos"
 
-#: ../../build/docs/un_sdg/data.rst:108 ../../build/docs/un_sdg/data.rst:240
+#: ../../build/docs/un_sdg/data.rst:108 ../../build/docs/un_sdg/data.rst:238
 msgid ""
 "The next step is to run ``osm2pgrouting`` converter, which is a command "
 "line tool that inserts the data in the database, \"ready\" to be used "
-"with pgRouting. Additional information about ``osm2pgrouting`` can be "
-"found `here "
-"<https://workshop.pgrouting.org/2.6/en/chapters/osm2pgrouting.html#osm2pgrouting>`_"
+"with pgRouting. See :doc:`../appendix/appendix-3` for additional "
+"information about ``osm2pgrouting``."
 msgstr ""
+"El siguiente paso es ejecutar el convertidor ``osm2pgrouting'', que es "
+"una herramienta de línea de comandos que inserta los datos en la base de "
+"datos, \"listo\" para ser utilizado con pgRouting. Puede encontrar "
+"información adicional sobre ``osm2pgrouting`` en "
+":doc:`../appendix/appendix-3`"
 
-#: ../../build/docs/un_sdg/data.rst:114 ../../build/docs/un_sdg/data.rst:245
+#: ../../build/docs/un_sdg/data.rst:112 ../../build/docs/un_sdg/data.rst:242
 msgid "For this step the following is used:"
-msgstr ""
+msgstr "Para este paso se utiliza lo siguiente:"
 
-#: ../../build/docs/un_sdg/data.rst:116
+#: ../../build/docs/un_sdg/data.rst:114
 msgid ""
 "``mumbai_buildings.xml`` and ``mumbai_roads.xml`` configuration files for"
 " osm2pgrouting."
 msgstr ""
+"Archivos de configuración ``mumbai_buildings.xml`` y ``mumbai_roads.xml``"
+" para osm2pgrouting."
 
-#: ../../build/docs/un_sdg/data.rst:117
+#: ../../build/docs/un_sdg/data.rst:115
 msgid "``~/Desktop/workshop/mumbai.osm`` - OSM data from the previous step"
-msgstr ""
+msgstr "``~/Desktop/workshop/mumbai.osm`` - Datos de OSM del paso anterior"
 
-#: ../../build/docs/un_sdg/data.rst:118
+#: ../../build/docs/un_sdg/data.rst:116
 msgid "``mumbai`` database."
-msgstr ""
+msgstr "Base de datos ``mumbai``."
 
-#: ../../build/docs/un_sdg/data.rst:120 ../../build/docs/un_sdg/data.rst:251
+#: ../../build/docs/un_sdg/data.rst:118 ../../build/docs/un_sdg/data.rst:248
 msgid ""
-"Contents of the configuration files are given in :ref:`Appendix`. Create "
+"Contents of the configuration files are given in the `Appendix`_. Create "
 "a XML file using these contents and save it into the root directory "
 "``~/Desktop/workshop``."
 msgstr ""
+"El contenido de los archivos de configuración se indican en el "
+"`Apéndice`_. Crear un archivo XML utilizando estos contenidos y guardar "
+"en el directorio raíz ``~/Desktop/workshop``."
 
-#: ../../build/docs/un_sdg/data.rst:123
+#: ../../build/docs/un_sdg/data.rst:121
 msgid ""
 "Open a terminal window by ``ctrl-alt-t`` and move to the workshop "
 "directory by ``cd ~/Desktop/workshop``. The following ``osm2pgrouting`` "
 "command will be used to convert the osm files to pgRouting friendly "
 "format which we will use for further exercises."
 msgstr ""
+"Abrir una ventana de terminal con ``ctrl-alt-t`` y navegar al directorio "
+"del taller ``cd ~/Desktop/workshop``. El siguiente comando "
+"``osm2pgrouting`` se utilizará para convertir los archivos osm a un "
+"formato amigable a pgRouting que usaremos para ejercicios posteriores."
+
+#: ../../build/docs/un_sdg/data.rst:126
+msgid "Importing Mumbai Roads"
+msgstr "Importación de los caminos de Mumbai"
 
 #: ../../build/docs/un_sdg/data.rst:128
-msgid "Importing Mumbai Roads"
-msgstr ""
-
-#: ../../build/docs/un_sdg/data.rst:130
 msgid ""
 "The following ``osm2pgrouting`` command will be used to import the Roads "
 "from OpenStreetMaps file to pgRouting database which we will use for "
 "further exercises."
 msgstr ""
+"El siguiente comando ``osm2pgrouting`` se utilizará para importar los "
+"caminos del archivo de OpenStreetMap a la base de datos pgRouting los "
+"cuales usaremos para ejercicios posteriores."
 
-#: ../../build/docs/un_sdg/data.rst:140 ../../build/docs/un_sdg/data.rst:161
-#: ../../build/docs/un_sdg/data.rst:269
+#: ../../build/docs/un_sdg/data.rst:138 ../../build/docs/un_sdg/data.rst:159
+#: ../../build/docs/un_sdg/data.rst:266
 msgid "Depending on the osm2pgrouting version `-W password` is needed"
-msgstr ""
+msgstr "Dependiendo de la versión osm2pgrouting `-W password` es necesario"
 
-#: ../../build/docs/un_sdg/data.rst:143 ../../build/docs/un_sdg/data.rst:164
-#: ../../build/docs/un_sdg/data.rst:272
+#: ../../build/docs/un_sdg/data.rst:141 ../../build/docs/un_sdg/data.rst:162
+#: ../../build/docs/un_sdg/data.rst:269
 msgid "Output:"
-msgstr ""
+msgstr "Salida:"
+
+#: ../../build/docs/un_sdg/data.rst:147
+msgid "Importing Mumbai Buildings"
+msgstr "Importación de edificios de Mumbai"
 
 #: ../../build/docs/un_sdg/data.rst:149
-msgid "Importing Mumbai Buildings"
-msgstr ""
-
-#: ../../build/docs/un_sdg/data.rst:151
 msgid ""
 "Similar to Roads, ``osm2pgrouting`` command will be used to import the "
 "Buildings from OpenStreetMaps file to pgRouting database which we will "
 "use for further exercises."
 msgstr ""
+"Similar a los caminos, el comando ``osm2pgrouting`` se utilizará para "
+"importar los edificios desde el archivo de OpenStreetMaps a la base de "
+"datos pgRouting que usaremos para ejercicios posteriores."
 
-#: ../../build/docs/un_sdg/data.rst:169 ../../build/docs/un_sdg/data.rst:277
+#: ../../build/docs/un_sdg/data.rst:167 ../../build/docs/un_sdg/data.rst:274
 msgid "To connect to the database, type the following in the terminal."
-msgstr ""
+msgstr "Para conectarse a la base de datos, escribir lo siguiente en el terminal."
+
+#: ../../build/docs/un_sdg/data.rst:175
+msgid "Bangladesh database"
+msgstr "Base de datos de Bangladesh"
 
 #: ../../build/docs/un_sdg/data.rst:177
-msgid "Bangladesh database"
-msgstr ""
-
-#: ../../build/docs/un_sdg/data.rst:179
 msgid ""
 "Now download the data for an area in Bangladesh by  following the same "
 "steps like that of Mumbai."
 msgstr ""
+"Ahora descargar los datos de un área en Bangladesh siguiendo los mismos "
+"pasos que el de Mumbai."
+
+#: ../../build/docs/un_sdg/data.rst:181
+msgid "Create Bangladesh area database compatible with pgRouting"
+msgstr "Crear una base de datos de área de Bangladesh compatible con pgRouting"
 
 #: ../../build/docs/un_sdg/data.rst:183
-msgid "Create Bangladesh area database compatible with pgRouting"
-msgstr ""
-
-#: ../../build/docs/un_sdg/data.rst:185
 msgid "Use the following command to create ``bangladesh`` database"
-msgstr ""
+msgstr "Utilice el siguiente comando para crear la base de datos ``bangladesh``"
 
-#: ../../build/docs/un_sdg/data.rst:208
+#: ../../build/docs/un_sdg/data.rst:206
 msgid "Get the Bangladesh Data"
-msgstr ""
+msgstr "Obtener los datos de Bangladesh"
+
+#: ../../build/docs/un_sdg/data.rst:209
+msgid "Downloading Bangladesh data from OSGeo"
+msgstr "Descarga de datos de Bangladesh desde OSGeo"
 
 #: ../../build/docs/un_sdg/data.rst:211
-msgid "Downloading Bangladesh data from OSGeo"
-msgstr ""
-
-#: ../../build/docs/un_sdg/data.rst:213
 msgid ""
 "The following command is used to download the snapshot of the Bangladesh "
 "area data used in this workshop, using the download service of OSGeo."
 msgstr ""
+"El siguiente comando se utiliza para descargar la instantánea de los "
+"datos del área de Bangladesh utilizados en este taller, utilizando el "
+"servicio de descarga de OSGeo."
 
-#: ../../build/docs/un_sdg/data.rst:225
+#: ../../build/docs/un_sdg/data.rst:223
 msgid "Downloading Bangladesh data from OpenStreetMap"
-msgstr ""
+msgstr "Descarga de datos de Bangladesh desde OpenStreetMap"
 
-#: ../../build/docs/un_sdg/data.rst:226
+#: ../../build/docs/un_sdg/data.rst:224
 msgid ""
 "The following command is used to download the OSM data of the area in "
 "Munshigang, Bangladesh."
 msgstr ""
+"El siguiente comando se utiliza para descargar los datos OSM del área en "
+"Munshigang, Bangladesh."
 
-#: ../../build/docs/un_sdg/data.rst:235
-msgid ""
-"Refer to Section 1.2.1.3. from Chapter 1 :ref:`Option 3) Download using "
-"Overpass XAPI`"
-msgstr ""
+#: ../../build/docs/un_sdg/data.rst:233
+#, fuzzy
+msgid "See  :ref:`basic/data:Option 3) Download using Overpass XAPI`"
+msgstr "Ver :ref:`basic/data:Opción 3) Descargar usando Overpass XAPI`"
 
-#: ../../build/docs/un_sdg/data.rst:238
+#: ../../build/docs/un_sdg/data.rst:236
 msgid "Upload Bangladesh data to the database"
-msgstr ""
+msgstr "Cargar datos de Bangladesh en la base de datos"
 
-#: ../../build/docs/un_sdg/data.rst:247
+#: ../../build/docs/un_sdg/data.rst:244
 msgid "``waterways.xml`` configuration file"
-msgstr ""
+msgstr "Archivo de configuración ``waterways.xml``"
 
-#: ../../build/docs/un_sdg/data.rst:248
+#: ../../build/docs/un_sdg/data.rst:245
 msgid "``~/Desktop/workshop/bangladesh.osm`` - OSM data from the previous step"
-msgstr ""
+msgstr "``~/Desktop/workshop/bangladesh.osm`` - Datos de OSM del paso anterior"
 
-#: ../../build/docs/un_sdg/data.rst:249
+#: ../../build/docs/un_sdg/data.rst:246
 msgid "``bangladesh`` database"
-msgstr ""
+msgstr "Base de datos ``bangladesh``"
 
-#: ../../build/docs/un_sdg/data.rst:254
+#: ../../build/docs/un_sdg/data.rst:251
 msgid ""
 "Open a terminal window by ``ctrl-alt-t`` and move to the workshop "
 "directory by ``cd ~/Desktop/workshop``."
 msgstr ""
+"Abra una ventana de terminal con ``ctrl-alt-t`` y vaya al directorio del "
+"taller por ``cd ~/Desktop/workshop``."
 
-#: ../../build/docs/un_sdg/data.rst:258
+#: ../../build/docs/un_sdg/data.rst:255
 msgid "Importing Bangladesh Waterways"
-msgstr ""
+msgstr "Importación de vías navegables de Bangladesh"
 
-#: ../../build/docs/un_sdg/data.rst:260
+#: ../../build/docs/un_sdg/data.rst:257
 msgid ""
 "The following ``osm2pgrouting`` command will be used to import the "
 "Waterways from OpenStreetMaps file to pgRouting database which we will "
 "use for further exercises."
 msgstr ""
+"El siguiente comando de ``osm2pgrouting`` se utilizará para importar las "
+"vías navegables desde el archivo OpenStreetMaps a la base de datos "
+"pgRouting que usaremos para ejercicios posteriores."
+
+#: ../../build/docs/un_sdg/data.rst:283
+msgid "Appendix"
+msgstr "Apéndice"
 
 #: ../../build/docs/un_sdg/data.rst:286
-msgid "Appendix"
-msgstr ""
-
-#: ../../build/docs/un_sdg/data.rst:289
 msgid "Configuration information for Buildings"
-msgstr ""
+msgstr "Información de configuración para edificios"
 
-#: ../../build/docs/un_sdg/data.rst:297
+#: ../../build/docs/un_sdg/data.rst:294
 msgid "Configuration information for Waterways"
-msgstr ""
-
+msgstr "Información de configuración para vías navegables"
