updating locale files

--- a/locale/en/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/en/LC_MESSAGES/basic/plpgsql_function.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
+# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
 # This file is distributed under the same license as the Workshop FOSS4G
-# Argentina package.
+# Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-03 14:18-0600\n"
+"POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -222,11 +222,11 @@ msgid "For this chapter, the following points will be used for testing."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:66
-msgid "(lat,lon) = (-34.59, -58.4112)"
+msgid "(lat,lon) = (43.784, 11.2384)"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:67
-msgid "(lat,lon) = (-34.5850, -58.4077)"
+msgid "(lat,lon) = (43.778, 11.2492)"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:69
@@ -500,7 +500,7 @@ msgid "Calculate the OSM identifier of the nearest vertex to a point."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:249
-msgid "In particular use the following (lat,lon) value:  ``(-34.59, -58.4112)``."
+msgid "In particular use the following (lat,lon) value:  ``(43.784, 11.2384)``."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:251
@@ -710,7 +710,7 @@ msgid "Test the ``wrk_NearestOSM`` function."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:378
-msgid "In particular use the following (lat,lon) values:  ``(-34.59, -58.4112)``."
+msgid "In particular use the following (lat,lon) values:  ``(43.784, 11.2384)``."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:380
@@ -929,11 +929,11 @@ msgid "Use ``wrk_fromAtoB``"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:533
-msgid "Departure point is: (lat,lon) = ``(-34.59, -58.4112)``"
+msgid "Departure point is: (lat,lon) = ``(43.784, 11.2384)``"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:534
-msgid "Destination point is: (lat,lon) = ``(-34.5850, -58.4077)``"
+msgid "Destination point is: (lat,lon) = ``(43.778, 11.2492)``"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:537
