--- a/locale/en/LC_MESSAGES/basic/vehicle.po
+++ b/locale/en/LC_MESSAGES/basic/vehicle.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
+# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
 # This file is distributed under the same license as the Workshop FOSS4G
-# Argentina package.
+# Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-03 14:18-0600\n"
+"POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -152,10 +152,10 @@ msgid "Problem:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:92
-msgid "From the \"|place_3|\" to the \"|place_1|\" by car."
+msgid "From the \"|place_1|\" to the \"|place_3|\" by car."
 msgstr ""
 
-msgid "From |place_3| to the |place_1| by car."
+msgid "From |place_1| to the |place_3| by car."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:99 ../../build/docs/basic/vehicle.rst:127
@@ -166,8 +166,9 @@ msgid "Solution:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:100
+#: ../../build/docs/basic/vehicle.rst:158
 msgid ""
-"The vehicle is going from vertex |id_3| (line **10**) to |id_1| (line "
+"The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line "
 "**11**)."
 msgstr ""
 
@@ -187,16 +188,15 @@ msgid "Exercise 2: Vehicle routing - returning"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:120
-msgid "From \"|place_1|\" to the \"|place_3|\" by car."
+msgid "From \"|place_3|\" to the \"|place_1|\" by car."
 msgstr ""
 
-msgid "From |place_1| to the |place_3| by car."
+msgid "From |place_3| to the |place_1| by car."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:128
-#: ../../build/docs/basic/vehicle.rst:158
 msgid ""
-"The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line "
+"The vehicle is going from vertex |id_3| (line **10**) to |id_1| (line "
 "**11**)."
 msgstr ""
 
