--- a/locale/pot/basic/sql_function.pot
+++ b/locale/pot/basic/sql_function.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara, Rajat Shinde
-# This file is distributed under the same license as the Workshop FOSS4G Italy package.
+# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
+# This file is distributed under the same license as the Workshop FOSS4G Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Italy 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-06 17:34+0000\n"
+"POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -61,7 +61,7 @@ msgid "Circulate on a smaller area near \"|place_4|\"."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:45
-msgid "Bounding box: ``(11.20,43.76,11.27,43.79)``"
+msgid "Bounding box: ``(11.24,43.77,11.27,43.79)``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:46
@@ -412,7 +412,7 @@ msgid "Create a view ``taxi_net`` for the `taxi`:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:169
-msgid "The taxi can only circulate inside this Bounding Box: ``(11.20,43.76,11.27,43.79)``"
+msgid "The taxi can only circulate inside this Bounding Box: ``(11.24,43.77,11.27,43.79)``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:170
@@ -428,7 +428,7 @@ msgid "The graph for the taxi is a subset of the ``vehicle_net`` graph. (line **
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:179
-msgid "Can only circulate inside the bounding box: ``(11.20,43.76,11.27,43.79)``. (line **10**)"
+msgid "Can only circulate inside the bounding box: ``(11.24,43.77,11.27,43.79)``. (line **10**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:180
