--- a/locale/pot/basic/vehicle.pot
+++ b/locale/pot/basic/vehicle.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
-# This file is distributed under the same license as the Workshop FOSS4G Argentina package.
+# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
+# This file is distributed under the same license as the Workshop FOSS4G Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-03 14:18-0600\n"
+"POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -133,11 +133,11 @@ msgid "Problem:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:92
-msgid "From the \"|place_3|\" to the \"|place_1|\" by car."
+msgid "From the \"|place_1|\" to the \"|place_3|\" by car."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:None
-msgid "From |place_3| to the |place_1| by car."
+msgid "From |place_1| to the |place_3| by car."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:99
@@ -149,7 +149,8 @@ msgid "Solution:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:100
-msgid "The vehicle is going from vertex |id_3| (line **10**) to |id_1| (line **11**)."
+#: ../../build/docs/basic/vehicle.rst:158
+msgid "The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line **11**)."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:101
@@ -166,16 +167,15 @@ msgid "Exercise 2: Vehicle routing - returning"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:120
-msgid "From \"|place_1|\" to the \"|place_3|\" by car."
+msgid "From \"|place_3|\" to the \"|place_1|\" by car."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:None
-msgid "From |place_1| to the |place_3| by car."
+msgid "From |place_3| to the |place_1| by car."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:128
-#: ../../build/docs/basic/vehicle.rst:158
-msgid "The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line **11**)."
+msgid "The vehicle is going from vertex |id_3| (line **10**) to |id_1| (line **11**)."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:140
