--- a/locale/en/LC_MESSAGES/basic/data.po
+++ b/locale/en/LC_MESSAGES/basic/data.po
@@ -1,22 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
+# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
 # This file is distributed under the same license as the Workshop FOSS4G
-# Argentina package.
+# Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-06 17:34+0000\n"
+"POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.10.1\n"
+"Generated-By: Babel 2.9.1\n"
 
 #: ../../build/docs/basic/data.rst:12
 msgid "Prepare Data"
