--- a/locale/en/LC_MESSAGES/un_sdg/data.po
+++ b/locale/en/LC_MESSAGES/un_sdg/data.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
+# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
 # This file is distributed under the same license as the Workshop FOSS4G
-# Argentina package.
+# Firenze package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-10 13:12-0600\n"
+"POT-Creation-Date: 2022-07-14 13:45-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -309,3 +309,4 @@ msgstr ""
 #: ../../build/docs/un_sdg/data.rst:296
 msgid "Configuration information for Waterways"
 msgstr ""
+
