[Locale] updating the locale files

--- a/locale/es/LC_MESSAGES/general-intro/osgeolive.po
+++ b/locale/es/LC_MESSAGES/general-intro/osgeolive.po
@@ -1,7 +1,8 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2010-2023 pgRouting Developers
-# This file is distributed under the same license as the Workshop FOSS4G Prizren package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# This file is distributed under the same license as the Workshop FOSS4G
+# Prizren package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
 #, fuzzy
 msgid ""
@@ -11,10 +12,13 @@ msgstr ""
 "POT-Creation-Date: 2023-05-20 15:37-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: es\n"
+"Language-Team: es <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/general-intro/osgeolive.rst:11
 msgid "OSGeoLive Installation"
@@ -25,15 +29,21 @@ msgid "All required tools are available on `OSGeoLive <http://live.osgeo.org>`__
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:15
-msgid "`OSGeoLive Quickstart for Running in a Virtual Machine <https://live.osgeo.org/en/quickstart/virtualization_quickstart.html>`__"
+msgid ""
+"`OSGeoLive Quickstart for Running in a Virtual Machine "
+"<https://live.osgeo.org/en/quickstart/virtualization_quickstart.html>`__"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:17
-msgid "`Creating an OSGeoLive Bootable USB flash drive <https://live.osgeo.org/en/quickstart/usb_quickstart.html>`__"
+msgid ""
+"`Creating an OSGeoLive Bootable USB flash drive "
+"<https://live.osgeo.org/en/quickstart/usb_quickstart.html>`__"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:20
-msgid "Before attending a workshop event, make sure your you can use `OSGeoLive` with either method or :doc:`../appendix/appendix-2` on your computer."
+msgid ""
+"Before attending a workshop event, make sure your you can use `OSGeoLive`"
+" with either method or :doc:`../appendix/appendix-2` on your computer."
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:24
@@ -49,7 +59,10 @@ msgid "Install `VirtualBox <https://www.virtualbox.org/>`__."
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:31
-msgid "This is a general description on how to install VirtualBox. Complete details about installation can be found on the `VirtualBox <https://www.virtualbox.org/>`__ documentation."
+msgid ""
+"This is a general description on how to install VirtualBox. Complete "
+"details about installation can be found on the `VirtualBox "
+"<https://www.virtualbox.org/>`__ documentation."
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:36
@@ -57,7 +70,9 @@ msgid "Linux distributions:"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:37
-msgid "Add the following line to your /etc/apt/sources.list. According to your distribution, replace `<mydist>` with your distribution name."
+msgid ""
+"Add the following line to your /etc/apt/sources.list. According to your "
+"distribution, replace `<mydist>` with your distribution name."
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:44
@@ -69,7 +84,9 @@ msgid "Install Virtual box using:"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:58
-msgid "More detailed and up to date information can be found `here <https://www.virtualbox.org/wiki/Linux_Downloads>`__"
+msgid ""
+"More detailed and up to date information can be found `here "
+"<https://www.virtualbox.org/wiki/Linux_Downloads>`__"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:62
@@ -81,15 +98,22 @@ msgid "Download OSGeoLive 16.0"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:67
-msgid "This installation method corresponds for the ``iso`` distribution of OSGeoLive. For other installations visit `OSgeoLive <https://osgeo.github.io/OSGeoLive-doc/en/index.html>`__"
+msgid ""
+"This installation method corresponds for the ``iso`` distribution of "
+"OSGeoLive. For other installations visit `OSgeoLive "
+"<https://osgeo.github.io/OSGeoLive-doc/en/index.html>`__"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:72
-msgid "The images on this section might not correspond to the VirtualBox or OSGeoLive version installed on your system, but the workflow is similar."
+msgid ""
+"The images on this section might not correspond to the VirtualBox or "
+"OSGeoLive version installed on your system, but the workflow is similar."
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:75
-msgid "From https://download.osgeo.org/livedvd/releases/16.0/ Download *osgeolive-16.0alpha3-amd64.iso*"
+msgid ""
+"From https://download.osgeo.org/livedvd/releases/16.0/ Download "
+"*osgeolive-16.0alpha3-amd64.iso*"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:80
@@ -156,7 +180,7 @@ msgstr ""
 msgid "On Storage it reads:"
 msgstr ""
 
-#: ../../build/docs/general-intro/osgeolive.rst:0
+#: ../../build/docs/general-intro/osgeolive.rst
 msgid "Controller"
 msgstr ""
 
@@ -165,7 +189,7 @@ msgstr ""
 msgid "IDE"
 msgstr ""
 
-#: ../../build/docs/general-intro/osgeolive.rst:0
+#: ../../build/docs/general-intro/osgeolive.rst
 msgid "IDE Secondary Device 0"
 msgstr ""
 
@@ -202,7 +226,9 @@ msgid "Start OSGeoLive"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:147
-msgid "Click on ``Start`` button, and click on ``capture``, to capture the mouse movements"
+msgid ""
+"Click on ``Start`` button, and click on ``capture``, to capture the mouse"
+" movements"
 msgstr ""
 
 #: ../../build/docs/general-intro/osgeolive.rst:152
@@ -232,3 +258,4 @@ msgstr ""
 #: ../../build/docs/general-intro/osgeolive.rst:177
 msgid "Install PostgrSQL, PostGIS and pgRouting ::"
 msgstr ""
+
