--- a/locale/es/LC_MESSAGES/un_sdg/data.po
+++ b/locale/es/LC_MESSAGES/un_sdg/data.po
@@ -10,19 +10,19 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-10 13:12-0600\n"
+"POT-Creation-Date: 2023-05-08 16:17+0000\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
 "Language: es\n"
 "Language-Team: Spanish "
 "(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/un_sdg/data.rst:11
 msgid "Data for Sustainable Development Goals"
@@ -70,7 +70,7 @@ msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
 "installed, open a terminal window by pressing ``ctrl-alt-t`` and follow "
 "the instructions.  Information about installing OSGeoLive can be found in"
-" :ref:`general-intro/chapter-3:Installation` of this workshop."
+" :doc:`../general-intro/osgeolive` of this workshop."
 msgstr ""
 "Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
 "requerido, abra una ventana de terminal presionando ``ctrl-alt-t`` y siga"
@@ -380,3 +380,4 @@ msgstr "Información de configuración para edificios"
 #: ../../build/docs/un_sdg/data.rst:296
 msgid "Configuration information for Waterways"
 msgstr "Información de configuración para vías navegables"
+
