--- a/locale/pot/un_sdg/sdg11-cities.pot
+++ b/locale/pot/un_sdg/sdg11-cities.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
-# This file is distributed under the same license as the Workshop FOSS4G Firenze package.
+# Copyright (C) 2010-2023 pgRouting Developers
+# This file is distributed under the same license as the Workshop FOSS4G Prizren package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-14 13:45-0500\n"
+"POT-Creation-Date: 2023-05-20 15:37-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr ""
 msgid "`Sustainable Cities and Communities` is the 11th Sustainable Development Goal which aspires to make cities `inclusive, safe, resilient` and `sustainable`.The world is becoming increasingly urbanized. Since 2007, more than half the world’s population has been living in cities. This makes it very important for the cities to remain alert when there is a chance of disaster like floods. Local administration should know if their city is going to get affected by the rains which happen in their proximity so that they can raise an alert amongst the citizens. This exercise will solve one of such problems."
 msgstr ""
 
-#: ../../build/docs/un_sdg/sdg11-cities.rst:None
+#: ../../build/docs/un_sdg/sdg11-cities.rst:-1
 msgid "Sustainable Development Goal 11: Sustainable Cities and Communities"
 msgstr ""
 
