--- a/locale/pot/un_sdg/sdg7-energy.pot
+++ b/locale/pot/un_sdg/sdg7-energy.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
-# This file is distributed under the same license as the Workshop FOSS4G Firenze package.
+# Copyright (C) 2010-2023 pgRouting Developers
+# This file is distributed under the same license as the Workshop FOSS4G Prizren package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-14 13:45-0500\n"
+"POT-Creation-Date: 2023-05-20 15:37-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr ""
 msgid "`Affordable and Clean Energy` is the 7th Sustainable Development Goal 11. It aspires to ensure access to `affordable, reliable, sustainable` and `modern` energy for all. Today renewable energy is making impressive gains in the electricity sector. As more and more new settlements are built, there would be new electricity distribution network developed. Electricity Distribution is very expensive infrastructure. Finding the optimal path for laying this infrastructure is very crucial to maintain the affordability of electricity for everyone. This exercise focusses on finding this optimal path/network for laying the electricity distribution equipment."
 msgstr ""
 
-#: ../../build/docs/un_sdg/sdg7-energy.rst:None
+#: ../../build/docs/un_sdg/sdg7-energy.rst:-1
 msgid "Sustainable Development Goal 7: Affordable and Clean Energy"
 msgstr ""
 
