--- a/locale/es/LC_MESSAGES/advanced/chapter-12.po
+++ b/locale/es/LC_MESSAGES/advanced/chapter-12.po
@@ -9,7 +9,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 09:41-0600\n"
 "PO-Revision-Date: 2022-03-01 19:42+0000\n"
