--- a/locale/es/LC_MESSAGES/basic/data.po
+++ b/locale/es/LC_MESSAGES/basic/data.po
@@ -8,22 +8,22 @@
 # Manuel Retamozo <manuel.retamozo@gmail.com>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
 # Vicky Vergara <vicky@georepublic.de>, 2022
-#
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2023-05-08 16:17+0000\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
 "Language: es\n"
+"Language-Team: Spanish "
+"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/data.rst:12
 msgid "Prepare Data"
@@ -31,8 +31,7 @@ msgstr "Preparar Datos"
 
 #: ../../build/docs/basic/data.rst:17
 msgid "To be able to use pgRouting, data has to be imported into a database."
-msgstr ""
-"Para poder usar pgRouting, los datos deben importarse a una base de datos."
+msgstr "Para poder usar pgRouting, los datos deben importarse a una base de datos."
 
 #: ../../build/docs/basic/data.rst:20
 msgid "Chapter Contents"
@@ -55,171 +54,177 @@ msgid "Supported PostGIS version"
 msgstr "Versión PostGIS compatible"
 
 #: ../../build/docs/basic/data.rst:30
+#, fuzzy
 msgid ""
 "These requirements are met on OSGeoLive. When the required software is "
-"installed, open a terminal window by pressing :code:`ctrl-alt-t` and follow "
-"the instructions. Information about installing OSGeoLive can be found on "
-":doc:`../general-intro/chapter-3`."
+"installed, open a terminal window by pressing :code:`ctrl-alt-t` and "
+"follow the instructions. Information about installing OSGeoLive can be "
+"found on :doc:`../general-intro/osgeolive`."
 msgstr ""
 "Estos requisitos se cumplen en OSGeoLive. Cuando se instale el software "
-"necesario, abrir una ventana de terminal presionando :code:`ctrl-alt-t` y "
-"siguir las instrucciones. Se puede encontrar información sobre la "
+"necesario, abrir una ventana de terminal presionando :code:`ctrl-alt-t` y"
+" siguir las instrucciones. Se puede encontrar información sobre la "
 "instalación de OSGeoLive en  :doc:`../general-intro/chapter-3`."
 
 #: ../../build/docs/basic/data.rst:33
 msgid ""
-"If OSGeoLive is not being used, please refer to the chapter's appendix to "
-"set up the user \"user\"."
+"If OSGeoLive is not being used, please refer to the chapter's appendix to"
+" set up the user \"user\"."
 msgstr ""
-"Si OSGeoLive no se está utilizando, consulte el apéndice del capítulo para "
-"configurar el usuario \"user\"."
+"Si OSGeoLive no se está utilizando, consulte el apéndice del capítulo "
+"para configurar el usuario \"user\"."
 
-#: ../../build/docs/basic/data.rst:39
+#: ../../build/docs/basic/data.rst:36
 msgid "Create a pgRouting compatible database"
 msgstr "Crear una base de datos compatible con pgRouting"
 
-#: ../../build/docs/basic/data.rst:41
+#: ../../build/docs/basic/data.rst:38
 msgid ""
 "Depending on the postgres configuration :code:`-U <user>` is needed on "
 ":code:`psql` commands"
 msgstr ""
-"Dependiendo de la configuración de postgres :code:`-U <user>` es necesario "
-"en los comandos"
+"Dependiendo de la configuración de postgres :code:`-U <user>` es "
+"necesario en los comandos"
 
-#: ../../build/docs/basic/data.rst:50
+#: ../../build/docs/basic/data.rst:47
 msgid "Get the Workshop Data"
 msgstr "Obtenga los Datos del Taller"
 
-#: ../../build/docs/basic/data.rst:54
+#: ../../build/docs/basic/data.rst:51
+#, fuzzy
 msgid ""
-"The pgRouting workshop will make use of OpenStreetMap data, which is already"
-" available on `OSGeoLive <http://live.osgeo.org>`_. This workshop will use "
-"the ``Buenos Aires`` city data and is a snapshot of August 2020."
+"The pgRouting workshop will make use of OpenStreetMap data, which is "
+"already available on `OSGeoLive <http://live.osgeo.org>`_. This workshop "
+"will use the ``Prizren`` city data and is a snapshot of March 2023."
 msgstr ""
 "El taller pgRouting hará uso de los datos de OpenStreetMap, que ya está "
-"disponible en `OSGeoLive <http://live.osgeo.org>`_. Este taller utilizará "
-"los datos de la ciudad de ``Buenos Aires`` y es una instantánea de Agosto de"
-" 2020."
+"disponible en `OSGeoLive <http://live.osgeo.org>`_. Este taller utilizará"
+" los datos de la ciudad de ``Buenos Aires`` y es una instantánea de "
+"Agosto de 2020."
 
-#: ../../build/docs/basic/data.rst:59
+#: ../../build/docs/basic/data.rst:56
 msgid "Getting the data"
 msgstr "Obtención de los datos"
 
-#: ../../build/docs/basic/data.rst:62
+#: ../../build/docs/basic/data.rst:59
 msgid "Option 1) When using OSGeoLive"
 msgstr "Opción 1) Cuando esté usando OSGeoLive"
 
-#: ../../build/docs/basic/data.rst:64
-msgid "OSGeoLive comes with osm data from the city of Buenos Aires."
+#: ../../build/docs/basic/data.rst:61
+#, fuzzy
+msgid "OSGeoLive comes with osm data from the city of Prizren."
 msgstr "OSGeoLive viene con datos de osm de la ciudad de Buenos Aires."
 
-#: ../../build/docs/basic/data.rst:72
+#: ../../build/docs/basic/data.rst:69
 msgid "Option 2) Download data form OSGeoLive website"
 msgstr "Opción 2) Descargar datos de sitio web de OSGeoLive."
 
-#: ../../build/docs/basic/data.rst:74
+#: ../../build/docs/basic/data.rst:71
 msgid "The exact same data can be found on the OSGeoLive download page."
 msgstr ""
 "Los mismos datos exactos se pueden encontrar en la página de descarga de "
 "OSGeoLive."
 
-#: ../../build/docs/basic/data.rst:83
+#: ../../build/docs/basic/data.rst:80
 msgid "Option 3) Download using Overpass XAPI"
 msgstr "Opción 3) Descargar usando Overpass XAPI"
 
-#: ../../build/docs/basic/data.rst:85
+#: ../../build/docs/basic/data.rst:82
+#, fuzzy
 msgid ""
-"The following downloads the latest OSM data on using the same area. Using "
-"this data in the workshop can generate variations in the results, due to "
-"changes since August 2020."
+"The following downloads the latest OSM data on using the same area. Using"
+" this data in the workshop can generate variations in the results, due to"
+" changes since March 2023."
 msgstr ""
-"A continuación se descargan los datos de OSM más recientes sobre el uso de "
-"la misma área. El uso de estos datos en el taller puede generar variaciones "
-"en los resultados, debido a los cambios desde Agosto de 2020."
+"A continuación se descargan los datos de OSM más recientes sobre el uso "
+"de la misma área. El uso de estos datos en el taller puede generar "
+"variaciones en los resultados, debido a los cambios desde Agosto de 2020."
+
+#: ../../build/docs/basic/data.rst:92
+msgid ""
+"More information about how to download OpenStreetMap data can be found in"
+" https://wiki.openstreetmap.org/wiki/Downloading_data"
+msgstr ""
+"Puede encontrar más información sobre cómo descargar datos de "
+"OpenStreetMap en https://wiki.openstreetmap.org/wiki/Downloading_data"
 
 #: ../../build/docs/basic/data.rst:95
-msgid ""
-"More information about how to download OpenStreetMap data can be found in "
-"https://wiki.openstreetmap.org/wiki/Downloading_data"
-msgstr ""
-"Puede encontrar más información sobre cómo descargar datos de OpenStreetMap "
-"en https://wiki.openstreetmap.org/wiki/Downloading_data"
-
-#: ../../build/docs/basic/data.rst:98
 msgid ""
 "An alternative for very large areas is to use the download services of "
 "`Geofabrik <http://download.geofabrik.de>`_."
 msgstr ""
-"Una alternativa para zonas muy grandes es utilizar los servicios de descarga"
-" de `Geofabrik <http://download.geofabrik.de>`_."
+"Una alternativa para zonas muy grandes es utilizar los servicios de "
+"descarga de `Geofabrik <http://download.geofabrik.de>`_."
 
-#: ../../build/docs/basic/data.rst:103
+#: ../../build/docs/basic/data.rst:100
 msgid "Upload data to the database"
 msgstr "Cargar datos en la base de datos"
 
-#: ../../build/docs/basic/data.rst:105
+#: ../../build/docs/basic/data.rst:102
 msgid ""
-"The next step is to run ``osm2pgrouting`` converter, which is a command line"
-" tool that inserts the data in the database, \"ready\" to be used with "
-"pgRouting. Additional information about ``osm2pgrouting`` can be found at "
-"the :ref:`osm2pgrouting`"
+"The next step is to run ``osm2pgrouting`` converter, which is a command "
+"line tool that inserts the data in the database, \"ready\" to be used "
+"with pgRouting. Additional information about ``osm2pgrouting`` can be "
+"found at the :ref:`osm2pgrouting`"
 msgstr ""
-"El siguiente paso es ejecutar el convertidor ``osm2pgrouting'', que es una "
-"herramienta de línea de comandos que inserta los datos en la base de datos, "
-"\"listo\" para ser utilizado con pgRouting. Puede encontrar información "
-"adicional sobre ``osm2pgrouting`` en :ref:`osm2pgrouting`"
+"El siguiente paso es ejecutar el convertidor ``osm2pgrouting'', que es "
+"una herramienta de línea de comandos que inserta los datos en la base de "
+"datos, \"listo\" para ser utilizado con pgRouting. Puede encontrar "
+"información adicional sobre ``osm2pgrouting`` en :ref:`osm2pgrouting`"
 
-#: ../../build/docs/basic/data.rst:109
+#: ../../build/docs/basic/data.rst:106
 msgid "For this step:"
 msgstr "Para este paso:"
 
-#: ../../build/docs/basic/data.rst:111
+#: ../../build/docs/basic/data.rst:108
 msgid "the osm2pgrouting default ``mapconfig.xml`` configuration file is used"
 msgstr ""
 "se utiliza el archivo de configuración predeterminado de osm2pgrouting "
 "``mapconfig.xml``"
 
-#: ../../build/docs/basic/data.rst:112
-msgid "and the ``~/Desktop/workshop/BA_AR.osm`` data"
+#: ../../build/docs/basic/data.rst:109
+#, fuzzy
+msgid "and the ``~/Desktop/workshop/Prizren_XK.osm`` data"
 msgstr "y los datos de ``~/Desktop/workshop/BA_AR.osm``"
 
-#: ../../build/docs/basic/data.rst:113
+#: ../../build/docs/basic/data.rst:110
 msgid "with the ``city_routing`` database"
 msgstr "con la base de datos ``city_routing``"
 
-#: ../../build/docs/basic/data.rst:115
+#: ../../build/docs/basic/data.rst:112
 msgid "From a terminal window :code:`ctrl-alt-t`."
 msgstr "Desde una ventana de terminal  :code:`ctrl-alt-t`."
 
-#: ../../build/docs/basic/data.rst:118
+#: ../../build/docs/basic/data.rst:115
 msgid "Run the osm2pgrouting converter"
 msgstr "Ejecute el convertidor osm2pgrouting"
 
-#: ../../build/docs/basic/data.rst:126
+#: ../../build/docs/basic/data.rst:123
 msgid "Depending on the osm2pgrouting version `-W password` is needed"
 msgstr "Dependiendo de la versión osm2pgrouting `-W password` es necesario"
 
-#: ../../build/docs/basic/data.rst:129
+#: ../../build/docs/basic/data.rst:126
 msgid "Output:"
 msgstr "Salida:"
 
-#: ../../build/docs/basic/data.rst:136
+#: ../../build/docs/basic/data.rst:133
 msgid "Tables on the database"
 msgstr "Tablas en la base de datos"
 
-#: ../../build/docs/basic/data.rst:143
+#: ../../build/docs/basic/data.rst:140
 msgid "If everything went well the result should look like this:"
 msgstr "Si todo salió bien el resultado debería verse así:"
 
-#: ../../build/docs/basic/data.rst:149
+#: ../../build/docs/basic/data.rst:146
 msgid "Chapter: Appendix"
 msgstr "Capítulo: Apéndice"
 
-#: ../../build/docs/basic/data.rst:152
+#: ../../build/docs/basic/data.rst:149
 msgid ""
-"OSGeoLive's account name on the database is ``\"user\"``. To easily use the "
-"workshop when not using OSGeoLive this extra steps are needed:"
+"OSGeoLive's account name on the database is ``\"user\"``. To easily use "
+"the workshop when not using OSGeoLive this extra steps are needed:"
 msgstr ""
-"El nombre de cuenta de OSGeoLive en la base de datos es  ``\"user\"``. Para "
-"utilizar fácilmente el taller cuando no se utiliza OSGeoLive se necesitan "
-"estos pasos adicionales:"
+"El nombre de cuenta de OSGeoLive en la base de datos es  ``\"user\"``. "
+"Para utilizar fácilmente el taller cuando no se utiliza OSGeoLive se "
+"necesitan estos pasos adicionales:"
+
