--- a/locale/es/LC_MESSAGES/basic/vehicle.po
+++ b/locale/es/LC_MESSAGES/basic/vehicle.po
@@ -11,19 +11,19 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-03 14:18-0600\n"
+"POT-Creation-Date: 2023-05-20 15:37-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
 "Language: es\n"
 "Language-Team: Spanish "
 "(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/basic/vehicle.rst:12
 msgid "Vehicle Routing"
@@ -128,13 +128,13 @@ msgstr ""
 "inserta en el grafo para su procesamiento."
 
 #: ../../build/docs/basic/vehicle.rst:54
+#, fuzzy
 msgid ""
 "**Two way** roads - ``IF cost >= 0 AND reverse_cost >= 0`` and their "
 "values can be different. For example, it is faster going down hill on a "
 "sloped road. In general, ``cost`` and ``reverse_cost`` do not need to be "
-"length; they can be 84c2aa29125fdae1aae0cb25bc0ef2c097e7537ealmost "
-"anything, for example - time, slope, surface, road type, etc., or they "
-"can be a combination of multiple parameters."
+"length; they can be almost anything, for example - time, slope, surface, "
+"road type, etc., or they can be a combination of multiple parameters."
 msgstr ""
 "**Carreteras bidireccionales** -``IF cost >= 0 AND reverse_cost >= 0`` y "
 "sus valores pueden ser diferentes. Por ejemplo, es más rápido ir cuesta "
@@ -175,11 +175,13 @@ msgid "Problem:"
 msgstr "Problema:"
 
 #: ../../build/docs/basic/vehicle.rst:92
-msgid "From the \"|place_3|\" to the \"|place_1|\" by car."
+#, fuzzy
+msgid "From the \"|place_1|\" to the \"|place_3|\" by car."
 msgstr "Desde el lugar \"|place_3|\" hacia \"|place_1|\" en automóvil."
 
-msgid "From |place_3| to the |place_1| by car."
-msgstr "Desde |place_3| al |place_1| en coche."
+#: ../../build/docs/basic/vehicle.rst:-1
+msgid "From |place_1| to the |place_3| by car."
+msgstr "Desde |place_1| al |place_3| en coche."
 
 #: ../../build/docs/basic/vehicle.rst:99 ../../build/docs/basic/vehicle.rst:127
 #: ../../build/docs/basic/vehicle.rst:157
@@ -189,11 +191,12 @@ msgid "Solution:"
 msgstr "Solución:"
 
 #: ../../build/docs/basic/vehicle.rst:100
+#: ../../build/docs/basic/vehicle.rst:158
 msgid ""
-"The vehicle is going from vertex |id_3| (line **10**) to |id_1| (line "
+"The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line "
 "**11**)."
 msgstr ""
-"El vehículo va de vértice |id_3| (línea **10**) para |id_1| (línea "
+"El vehículo va desde vértice |id_1| (line **10**) hacia |id_3| (line "
 "**11**)."
 
 #: ../../build/docs/basic/vehicle.rst:101
@@ -215,19 +218,20 @@ msgid "Exercise 2: Vehicle routing - returning"
 msgstr "Ejercicio 2: Ruteo de vehículos - regreso"
 
 #: ../../build/docs/basic/vehicle.rst:120
-msgid "From \"|place_1|\" to the \"|place_3|\" by car."
-msgstr "Desde \"|place_1|\" hacia \"|place_3|\" en automóvil."
+#, fuzzy
+msgid "From \"|place_3|\" to the \"|place_1|\" by car."
+msgstr "Desde el lugar \"|place_3|\" hacia \"|place_1|\" en automóvil."
 
-msgid "From |place_1| to the |place_3| by car."
-msgstr "Desde |place_1| al |place_3| en coche."
+#: ../../build/docs/basic/vehicle.rst:-1
+msgid "From |place_3| to the |place_1| by car."
+msgstr "Desde |place_3| al |place_1| en coche."
 
 #: ../../build/docs/basic/vehicle.rst:128
-#: ../../build/docs/basic/vehicle.rst:158
 msgid ""
-"The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line "
+"The vehicle is going from vertex |id_3| (line **10**) to |id_1| (line "
 "**11**)."
 msgstr ""
-"El vehículo va desde vértice |id_1| (line **10**) hacia |id_3| (line "
+"El vehículo va de vértice |id_3| (línea **10**) para |id_1| (línea "
 "**11**)."
 
 #: ../../build/docs/basic/vehicle.rst:140
@@ -251,6 +255,7 @@ msgstr "Ejercicio 3: Ruteo de vehículos cuando el tiempo es dinero"
 msgid "From \"|place_1|\" to the \"|place_3|\" by taxi."
 msgstr "Desde \"|place_1|\" hacia \"|place_3|\" en taxi."
 
+#: ../../build/docs/basic/vehicle.rst:-1
 msgid "From |place_1| to |place_3| by taxi."
 msgstr "Desde |place_1| a |place_3| en taxi."
 
@@ -340,6 +345,7 @@ msgstr ""
 "La estructura de tabla ``configuration`` se puede obtener con el "
 "siguiente comando."
 
+#: ../../build/docs/basic/vehicle.rst:-1
 msgid "tag_id values"
 msgstr "valores de `tag_id`"
 
@@ -379,6 +385,7 @@ msgstr "Ejercicio 4: Ruteo de vehículos sin penalización"
 msgid "From the \"|place_3|\" to \"|place_1|\""
 msgstr "Desde \"|place_3|\" hacia \"|place_1|\""
 
+#: ../../build/docs/basic/vehicle.rst:-1
 msgid "From |place_3| to |place_1|"
 msgstr "Desde |place_3| a |place_1|"
 
@@ -464,6 +471,7 @@ msgstr "Estos valores son una exageración."
 msgid "From the \"|place_3|\" to \"|place_1|\" with penalization."
 msgstr "Desde \"|place_3|\" hacia \"|place_1|\" con la penalización."
 
+#: ../../build/docs/basic/vehicle.rst:-1
 msgid "From |place_5| to |place_3|"
 msgstr "Desde |place_5| a |place_3|"
 
@@ -495,7 +503,9 @@ msgstr ":ref:`basic/appendix:**Ejercicio**: 5 (**Capítulo:** vehículo)`"
 
 #: ../../build/docs/basic/vehicle.rst:332
 msgid "Comparing with `Exercise 3: Vehicle routing when time is money`_:"
-msgstr "Comparando con `Ejercicio 3: Ruteo de vehículos cuando el tiempo es dinero`_"
+msgstr ""
+"Comparando con `Ejercicio 3: Ruteo de vehículos cuando el tiempo es "
+"dinero`_"
 
 #: ../../build/docs/basic/vehicle.rst:334
 msgid "The total number of records changed."
