--- a/locale/es/LC_MESSAGES/general-intro/introduction.po
+++ b/locale/es/LC_MESSAGES/general-intro/introduction.po
@@ -3,195 +3,217 @@
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
-# 
+#
 # Translators:
 # Vicky Vergara <vicky@georepublic.de>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
-# 
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2023-05-20 15:37-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
 "Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
-"Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
 "Language: es\n"
+"Language-Team: Spanish "
+"(https://www.transifex.com/pgrouting/teams/1219/es/)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.12.1\n"
 
-#: ../../build/docs/general-intro/chapter-1.rst:11
+#: ../../build/docs/general-intro/introduction.rst:11
 msgid "Introduction"
 msgstr "Introducción"
 
-#: ../../build/docs/general-intro/chapter-1.rst:14
-msgid "Abstract"
-msgstr "Resumen"
-
-#: ../../build/docs/general-intro/chapter-1.rst:15
-msgid ""
-"|pgrouting-web| adds routing functionality to |postgis-web|. This "
-"introductory workshop will demonstrate the routing functionality by "
-"providing practical examples using |osm-web| road network data. It will be "
-"covering topics starting from preparing the data, making routing queries, "
-"writing custom 'plpgsql' functions up to integrating pgRouting with other "
-"FOSS4G tools."
+#: ../../build/docs/general-intro/introduction.rst:13
+msgid "|pgrouting-web| adds routing functionality to |postgis-web|."
 msgstr ""
-"|pgrouting-web| añade funcionalidad de ruteo a |postgis-web|. Este taller "
-"introductorio demostrará la funcionalidad de ruteo proporcionando ejemplos "
-"prácticos utilizando datos |osm-web| de la red de carreteras. Se tratarán "
-"temas que comienzan desde la preparación de los datos, la realización de "
-"consultas de enrutamiento, la escritura de funciones personalizadas "
-"'plpgsql' hasta la integración de pgRouting con otras herramientas FOSS4G."
 
-#: ../../build/docs/general-intro/chapter-1.rst:21
+#: ../../build/docs/general-intro/introduction.rst:15
+#, fuzzy
 msgid ""
-"Road networks navigation require complex graph algorithms. pgRouting is an "
-"extendible open-source library that provides a variety of tools for graph "
-"algorithms, including shortest path search, as an extension of PostgreSQL "
-"and PostGIS."
+"Please see the :doc:`contents <../index>` for full content of **FOSS4G "
+"Prizren** workshop.  This workshop covers two levels for using pgRouting:"
+" `Basic`_ and `Advanced`_."
 msgstr ""
-"La navegación por redes de carretera requiere algoritmos gráficos complejos."
-" pgRouting es una biblioteca de código abierto extensible que proporciona "
-"una variedad de herramientas para algoritmos de gráficos, incluida la "
-"búsqueda de rutas más corta, como una extensión de PostgreSQL y PostGIS."
+"Consulte :doc:`contents <../index>` para obtener todo el contenido de "
+"este taller."
 
-#: ../../build/docs/general-intro/chapter-1.rst:24
+#: ../../build/docs/general-intro/introduction.rst:20
+msgid "Basic"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:22
+#, fuzzy
 msgid ""
-"The workshop will focus on real road networks of the FOSS4G Argentina "
-"surrounding area. It will cover the following topics:"
+"will demonstrate the routing functionality by providing examples using "
+"|osm-web| road network data from Prizren. Covering topics from how to "
+"prepare the data, making routing queries, understanding the results, up "
+"to writing a custom 'plpgsql' function that can be integrated with other "
+"FOSS tools."
 msgstr ""
-"El taller se centrará en las redes viales reales de la FOSS4G Argentina en "
-"los alrededores. Abarcará los siguientes temas:"
+"|pgrouting-web| añade funcionalidad de ruteo a |postgis-web|. Este taller"
+" introductorio demostrará la funcionalidad de ruteo proporcionando "
+"ejemplos prácticos utilizando datos |osm-web| de la red de carreteras. Se"
+" tratarán temas que comienzan desde la preparación de los datos, la "
+"realización de consultas de enrutamiento, la escritura de funciones "
+"personalizadas 'plpgsql' hasta la integración de pgRouting con otras "
+"herramientas FOSS4G."
 
-#: ../../build/docs/general-intro/chapter-1.rst:27
+#: ../../build/docs/general-intro/introduction.rst:28
 msgid "Installing pgRouting."
 msgstr "Instalación de pgRouting."
 
-#: ../../build/docs/general-intro/chapter-1.rst:28
+#: ../../build/docs/general-intro/introduction.rst:29
 msgid "Creating a routing topology."
 msgstr "Creación de una topología de ruteo."
 
-#: ../../build/docs/general-intro/chapter-1.rst:29
-msgid "Importing  |osm-web| road network data."
+#: ../../build/docs/general-intro/introduction.rst:30
+#, fuzzy
+msgid "Importing |osm-web| road network data."
 msgstr "Importación de |osm-web| datos de la red de carreteras."
 
-#: ../../build/docs/general-intro/chapter-1.rst:30
+#: ../../build/docs/general-intro/introduction.rst:31
 msgid "Using pgRouting algorithms."
 msgstr "Uso de algoritmos pgRouting."
 
-#: ../../build/docs/general-intro/chapter-1.rst:31
+#: ../../build/docs/general-intro/introduction.rst:32
 msgid "Writing advanced queries."
 msgstr "Escribir consultas avanzadas."
 
-#: ../../build/docs/general-intro/chapter-1.rst:32
-msgid "Writing a custom PostgreSQL stored procedure in ‘plpgsql’."
+#: ../../build/docs/general-intro/introduction.rst:33
+#, fuzzy
+msgid "Writing a custom PostgreSQL stored procedure in `plpgsql`"
 msgstr ""
-"Escribir un procedimiento almacenado PostgreSQL personalizado en 'plpgsql'."
+"Escribir un procedimiento almacenado PostgreSQL personalizado en "
+"'plpgsql'."
 
-#: ../../build/docs/general-intro/chapter-1.rst:34
-msgid ""
-"Please see the :doc:`contents <../index>` for full content of this workshop."
-msgstr ""
-"Consulte :doc:`contents <../index>` para obtener todo el contenido de este "
-"taller."
-
-#: ../../build/docs/general-intro/chapter-1.rst:37
+#: ../../build/docs/general-intro/introduction.rst:36
+#: ../../build/docs/general-intro/introduction.rst:49
 msgid "Prerequisites"
 msgstr "Pre-requisitos"
 
-#: ../../build/docs/general-intro/chapter-1.rst:38
-msgid "Workshop level: intermediate."
+#: ../../build/docs/general-intro/introduction.rst:37
+#, fuzzy
+msgid "Workshop level: basic."
 msgstr "Nivel de taller: intermedio."
 
-#: ../../build/docs/general-intro/chapter-1.rst:39
-msgid "Attendee's previous knowledge: SQL (PostgreSQL, PostGIS)"
+#: ../../build/docs/general-intro/introduction.rst:38
+#, fuzzy
+msgid "Previous knowledge: SQL (PostgreSQL, PostGIS)"
 msgstr "Conocimiento previo del asistente: SQL (PostgreSQL, PostGIS)"
 
-#: ../../build/docs/general-intro/chapter-1.rst:40
-msgid ""
-"Equipments: This workshop uses `OSGeoLive <https://live.osgeo.org>`__ (14.0)"
+#: ../../build/docs/general-intro/introduction.rst:39
+#: ../../build/docs/general-intro/introduction.rst:52
+#, fuzzy
+msgid "Equipments: `OSGeoLive <https://live.osgeo.org>`__ (16.0)"
 msgstr ""
-"Equipamientos: Este taller utiliza `OSGeoLive <https://live.osgeo.org>`__ "
-"(14.0)"
+"Equipamientos: Este taller utiliza `OSGeoLive <https://live.osgeo.org>`__"
+" (14.0)"
 
-#: ../../build/docs/general-intro/chapter-1.rst:43
-msgid "Authors"
-msgstr "Autores"
-
-#: ../../build/docs/general-intro/chapter-1.rst:57
-msgid "Alphabetical Order:"
-msgstr "orden alfabético:"
-
-#: ../../build/docs/general-intro/chapter-1.rst:59
-msgid ""
-"*Daniel Kastl* is founder and CEO of `Georepublic "
-"<https://georepublic.info>`_ and works in Germany and Japan. He is "
-"moderating and promoting the pgRouting community and development since the "
-"beginning of the project, and he's an active OSM contributor in Japan. OSGeo"
-" Charter member."
+#: ../../build/docs/general-intro/introduction.rst:42
+msgid "Advanced"
 msgstr ""
-"*Daniel Kastl* es fundador y CEO de `Georepublic "
-"<https://georepublic.info>`_ y trabaja en Alemania y Japón. Él es moderador "
-"y promotor de la comunidad de pgRouting y un desarrollador desde el inicio "
-"de este proyecto, y es un colaborador activo de OSM en Japón. Miembro "
-"Fundador de OSGeo."
 
-#: ../../build/docs/general-intro/chapter-1.rst:63
+#: ../../build/docs/general-intro/introduction.rst:44
 msgid ""
-"*Ko Nagase* works at `Georepublic <https://georepublic.info>`_  and works in"
-" Japan. tests of pgRouting project on Windows and Mac OSX environment. One "
-"of the contributors  of pgRoutingLayers for QGIS. OSGeo Charter member."
+"pgRouting is an extendible open-source library that provides a variety of"
+" tools for graph algorithms, this is not limited to routing vehicles. The"
+" advanced section covers several graph problems that can be solved using "
+"pgRouting."
 msgstr ""
-"*Ko Nagase* trabaja en `Georepublic <https://georepublic.info>`_ , en Japón."
-" Realiza pruebas del proyecto pgRouting en entornos Windows y Mac OSX. Uno "
-"de los contribuyentes de pgRoutingLayers para QGIS y Miembro Fundador de "
-"OSGeo."
 
-#: ../../build/docs/general-intro/chapter-1.rst:66
+#: ../../build/docs/general-intro/introduction.rst:50
+#, fuzzy
+msgid "Workshop level: Advanced."
+msgstr "Nivel de taller: intermedio."
+
+#: ../../build/docs/general-intro/introduction.rst:51
+#, fuzzy
+msgid "Previous knowledge: SQL (PostgreSQL, PostGIS, pgRouting)"
+msgstr "Conocimiento previo del asistente: SQL (PostgreSQL, PostGIS)"
+
+#: ../../build/docs/general-intro/introduction.rst:55
+msgid "Aknowledments"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:58
+#, fuzzy
+msgid "Sponsored by"
+msgstr "Apoyado por"
+
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "Paragon Corporation"
+msgstr "Paragon Corporation"
+
+#: ../../build/docs/general-intro/introduction.rst:64
+msgid "Developers & presenters of FOSS4G Prizren workshop:"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:65
+#, fuzzy
 msgid ""
-"*Stephen Woodbridge* works at the greater Boston, MA area. He was a "
-"pgrouting PSC member and developer. He develops solutions for mapping, "
-"geocoding, reverse geocoding, routing and processing of remote sensing "
-"imagery. OSGeo Charter member."
+"*Vicky Vergara* Is a freelance developer from Mexico. She's the core "
+"developer of pgRouting project and GSoC Mentor. OSGeo Charter member."
 msgstr ""
-"*Stephen Woodbridge* trabaja en el área metropolitana de Boston, MA. Era un "
-"miembro y desarrollador de PSC. Desarrolla soluciones para mapeo, "
-"geocodificación, geocodificación inversa, enrutamiento y procesamiento de "
-"imágenes de teledetección. Miembro Fundador de OSGeo."
+"*Vicky Vergara* trabaja en `Georepublic <https://georepublic.info>` _, en"
+" México. Ella es la desarrolladora principal del proyecto pgRouting y "
+"GSoC Mentor. Miembro Fundador de OSGeo."
 
-#: ../../build/docs/general-intro/chapter-1.rst:69
+#: ../../build/docs/general-intro/introduction.rst:68
 msgid ""
-"*Vicky Vergara* works at `Georepublic <https://georepublic.info>`_ and works"
-" in Mexico. She's the core developer of pgRouting project and GSoC Mentor. "
-"OSGeo Charter member."
+"*Ramón Ríos* Is a freelance developer from Mexico.  Lead engenieer for "
+"ParkUpFront"
 msgstr ""
-"*Vicky Vergara* trabaja en `Georepublic <https://georepublic.info>` _, en "
-"México. Ella es la desarrolladora principal del proyecto pgRouting y GSoC "
-"Mentor. Miembro Fundador de OSGeo."
 
-#: ../../build/docs/general-intro/chapter-1.rst:74
+#: ../../build/docs/general-intro/introduction.rst:73
+msgid "Past and present tutors and developers"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:74
+msgid ""
+"Daniel Kastl, José Ríos, Ko Nagase, Stephen Woodbridge, Swapnil Joshi, "
+"Rajat Shinde, Ramón Ríos, Rohith Reddy, Vicky Vergara"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:85
+msgid "Past and present supporters"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:86
+#, fuzzy
+msgid "Georepublic, Paragon Corporation"
+msgstr "Paragon Corporation"
+
+#: ../../build/docs/general-intro/introduction.rst:90
 msgid "License"
 msgstr "Licencias"
 
-#: ../../build/docs/general-intro/chapter-1.rst:75
+#: ../../build/docs/general-intro/introduction.rst:91
 msgid ""
-"This work is licensed under a `Creative Commons Attribution-Share Alike 3.0 "
-"License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
+"This work is licensed under a `Creative Commons Attribution-Share Alike "
+"3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
 msgstr ""
-"Esta obra está autorizada bajo una licencia  `Creative Commons Attribution-"
-"Share Alike 3.0 License <https://creativecommons.org/licenses/by-sa/3.0/>`_."
+"Esta obra está autorizada bajo una licencia  `Creative Commons "
+"Attribution-Share Alike 3.0 License <https://creativecommons.org/licenses"
+"/by-sa/3.0/>`_."
 
-#: ../../build/docs/general-intro/chapter-1.rst:80
-msgid "Supported by"
-msgstr "Apoyado por"
+#: ../../build/docs/general-intro/introduction.rst:97
+msgid "Become a sponsor"
+msgstr ""
 
-msgid "Georepublic"
-msgstr "Georepublic"
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "The Linux Foundation"
+msgstr ""
 
-msgid "Paragon Corporation"
-msgstr "Paragon Corporation"
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "Open Collective"
+msgstr ""
+
+#: ../../build/docs/general-intro/introduction.rst:-1
+msgid "OSGeo Foundation"
+msgstr ""
+
