--- a/locale/es/LC_MESSAGES/un-sdg/sdg11-cities.po
+++ b/locale/es/LC_MESSAGES/un-sdg/sdg11-cities.po
@@ -11,7 +11,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-10 17:38+0000\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
