--- a/locale/es/LC_MESSAGES/un_sdg/sdg3-health.po
+++ b/locale/es/LC_MESSAGES/un_sdg/sdg3-health.po
@@ -10,7 +10,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-04 11:09-0600\n"
 "PO-Revision-Date: 2021-10-10 17:39+0000\n"
