--- a/locale/pot/basic/vehicle.pot
+++ b/locale/pot/basic/vehicle.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
-# This file is distributed under the same license as the Workshop FOSS4G Firenze package.
+# Copyright (C) 2010-2023 pgRouting Developers
+# This file is distributed under the same license as the Workshop FOSS4G Prizren package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-22 21:16+0000\n"
+"POT-Creation-Date: 2023-05-20 15:37-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
